Halbes Leerzeichen bei Abkürzungen eingefügt.
Zwischen d.h. und anderen wurde ein halbes Leerzeichen eingebaut. Außerdem habe ich o.B.d.A. in \OE geändert, da Herr Kuelshammer dieses Zeichen benutzt.

git-svn-id: https://svn.lug-jena.de/uni-skripte@2335 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-algebra1/Kapitel10.tex
+++ b/kuelshammer-algebra1/Kapitel10.tex
@@ -3,8 +3,8 @@
 % Bemerkung 10.1
 %%%%%%%%%%%%%%%%%%%
 \begin{bem}\label{bem:10.1}
-(Wir wiederholen ohne Beweis grundlegende Tatsachen über Gruppen aus den Grundvorlesungen, Beweise z.B. im Lineare Algebra II Skript)\\
-Eine \highl{Gruppe} ist eine Menge $G$ mit einer \emph{assoziativen Verknüpfung} [d.h. $a(bc) = (ab)c$ für alle $a, b, c \in G$], die (genau) ein \emph{neutrales Element} $e = 1$ [d.h. $1a = a = a1$ für alle $a \in G$] enthält und zu jedem $g \in G$ (genau) ein \emph{inverses Element} $g^{-1}$ [d.h. $gg^{-1} = 1 = g^{-1}g$].
+(Wir wiederholen ohne Beweis grundlegende Tatsachen über Gruppen aus den Grundvorlesungen, Beweise z.\,B. im Lineare Algebra II Skript)\\
+Eine \highl{Gruppe} ist eine Menge $G$ mit einer \emph{assoziativen Verknüpfung} [d.\,h. $a(bc) = (ab)c$ für alle $a, b, c \in G$], die (genau) ein \emph{neutrales Element} $e = 1$ [d.\,h. $1a = a = a1$ für alle $a \in G$] enthält und zu jedem $g \in G$ (genau) ein \emph{inverses Element} $g^{-1}$ [d.\,h. $gg^{-1} = 1 = g^{-1}g$].
 Bekanntlich gilt: \[1^{-1} = 1, \left(a^{-1}\right)^{-1}, \left(ab\right)^{-1} = b^{-1}a^{-1} \ \ \left(a, b \in G\right)\]
 Die Anzahl $\left|G\right|$ der Elemente von $G$ heißt \emph{Ordnung} von $G$.
 Ist $ab = ba$ für alle $a, b \in G$, so heiße $G$ \emph{kommutativ} oder \emph{abelsch}.\\
@@ -41,7 +41,7 @@ $GL\left(V\right)$ heißt \highl{Gruppe!Allgemeine Lineare (GL)}{Allgemeine linea
 Jede Gruppe $G$ besitzt die triviale Untergruppe $\left\{1_G\right\} =: 1$; Untergruppen $H < G$ heißen \highl{Gruppe!Echte Untergruppe}{Echte Untergruppen}.\\
 Für jedes Element $a$ in einer Gruppe $G$ ist \[\left\langle a\right\rangle\ := \left\{a^n \colon n \in \Z\right\} \leq G\]
 Man nennt $\left\langle a\right\rangle$ die von $a$ erzeugte zyklische Untergruppe von $G$.
-Für $G = \left(\Z, +\right)$ und $a = 5$ ist z.B. $\left\langle a\right\rangle = \left\{0, \pm 5, \pm 10\right\} = 5\Z$.\\
+Für $G = \left(\Z, +\right)$ und $a = 5$ ist z.\,B. $\left\langle a\right\rangle = \left\{0, \pm 5, \pm 10\right\} = 5\Z$.\\
 Sei $G$ Gruppe, $H \leq G$ und $a \in G$. Dann heißt $aH := \left\{ah \colon h \in H\right\}$ \highl{Linksnebenklasse} und $Ha$ \highl{Rechtsnebenklasse} von $a$ nach $H$. Man setzt 
 \[\begin{array}{lcl}
 	\overbrace{G / H}^{G \ modulo \ H} & = & \left\{aH \colon a \in G\right\} \text{ Menge aller Linksnebenklassen}\\
@@ -129,7 +129,7 @@ Sei $G$ Gruppe und $N \taleq G$. Dann wird $G/N \left(= N\backslash G\right)$ ei
 \[\left(aN\right)\left(bN\right) := abN \ \ \ \left(a, b \in G\right)\]
 Diese heißt \highl{Gruppe!Faktorgruppe}{Faktorgruppe} von $G$ nach $N$.
 Dabei $1_{G/N} = 1N = N$, $\left(aN\right)^{-1} = a^{-1}N$ $\left(a \in G\right)$.
-Im Fall $G = \Z$, $H = 5\Z$ ist z.B.
+Im Fall $G = \Z$, $H = 5\Z$ ist z.\,B.
 \[G/H = \ZmZ{5} = \left\{0 + 5\Z, \ldots, 4 + 5\Z\right\}\]
 \end{bem}
 
@@ -200,8 +200,8 @@ bijektiv mit Umkehrabbildung $V\mapsto f^{-1}\left(V\right)$
 \begin{beweis}
 Für $U \leq G$ mit $Ker\left(f\right) \leq U$ ist $f\left(U\right) \leq f\left(G\right) = Bld\left(f\right)$, und für $V \leq Bld\left(f\right)$, ist $f^{-1}\left(V\right) \leq G$ mit $Ker\left(f\right) = f^{-1}\left(\left\{1_H\right\}\right) \subseteq f^{-1}\left(V\right)$.\\
 Noch zu zeigen: $f^{-1}\left(f\left(U\right)\right) = U$ und $f\left(f^{-1}\left(V\right)\right) = V$.\\
-Für $x \in f^{-1}\left(f\left(U\right)\right)$ ist $f\left(x\right) \in f\left(U\right)$, d.h. $f\left(x\right) = f\left(u\right)$ für ein $u \in U$.\\
-Dann: $f\left(x^{-1}u\right) = f\left(x^{-1}\right)f\left(u\right) = 1$, d.h. $x^{-1}u \in Ker\left(f\right) \leq U$ und $x^{-1}, x \in U$.\\
+Für $x \in f^{-1}\left(f\left(U\right)\right)$ ist $f\left(x\right) \in f\left(U\right)$, d.\,h. $f\left(x\right) = f\left(u\right)$ für ein $u \in U$.\\
+Dann: $f\left(x^{-1}u\right) = f\left(x^{-1}\right)f\left(u\right) = 1$, d.\,h. $x^{-1}u \in Ker\left(f\right) \leq U$ und $x^{-1}, x \in U$.\\
 Also: $f^{-1}\left(f\left(U\right)\right) \subseteq U$.
 Sicher ist $U \subseteq f^{-1}\left(f\left(U\right)\right)$.\\
 Sicher ist $f\left(f^{-1}\left(V\right)\right) \subseteq V$.\\
@@ -278,7 +278,7 @@ Wir setzen
 	
 	\item Für jede Gruppe $G$ ist die Abbildung \[F\colon G\mapsto \Aut\left(G\right), \ x\mapsto f_x,\] ein Homomorphismus, denn für $x,y \in G$ gilt:
 	\[\left(f_x \circ f_y\right)\left(a\right) = x\left(yay^{-1}\right)x^{-1} = \left(xy\right)a\left(xy\right)^{-1} = f_{xy}\left(a\right)\]
-	d.h. $F\left(x\right)F\left(y\right) = f_x \circ f_y = f_{xy} = F\left(xy\right)$.\\
+	d.\,h. $F\left(x\right)F\left(y\right) = f_x \circ f_y = f_{xy} = F\left(xy\right)$.\\
 	Dabei gilt: \[\begin{array}{lcl}x \in Ker\left(F\right) \Leftrightarrow f_x = id_G & \Leftrightarrow & xax^{-1} = a \ \ \forall a \in G\\ & \Leftrightarrow & xa = ax \ \ \forall a \in G\end{array}\]
 	Daher gilt: $Ker\left(F\right) = \left\{x \in G\colon xa = ax \ \forall a \in G\right\} =: Z\left(G\right)$\\
 	Man nenn $Z\left(G\right)$ das \highl{Gruppe!Zentrum}{Zentrum} von $G$.
@@ -293,7 +293,7 @@ Wir setzen
 	& = & \alpha\left(x\right)a\alpha\left(x\right)^{-1}\\
 	& = & f_{\alpha\left(x\right)}\left(a\right),
 	\end{array}\]
-	d.h. $\alpha \circ f_x \circ \alpha^{-1} = f_{\alpha\left(x\right)}$
+	d.\,h. $\alpha \circ f_x \circ \alpha^{-1} = f_{\alpha\left(x\right)}$
 	
 	\item Man nennt $Out\left(G\right) := \Aut\left(G\right)/Inn\left(G\right)$ die \highl{Automorphismengruppe!äußere}{äußere Automorphismengruppe} von $G$
 \end{enumerate}
@@ -379,13 +379,13 @@ Daher ist $Ker\left(h\right) = M$, und aus dem Homomorphiesatz (\autoref{satz:10
 %%%%%%%%%%%%%%%%%%%
 \begin{beweis}
 \begin{enumerate}[(i)]
-	\item Sei $U \leq \Z$, o.B.d.A. $U \neq \left\{0\right\} = 0\Z$.\\
+	\item Sei $U \leq \Z$, \OE{} $U \neq \left\{0\right\} = 0\Z$.\\
 	Für $a \in U$ ist auch $-a \in U$.
 	Daher ist $U \cap \N \neq \varnothing$.\\
 	Sei $n = \min{U \cap \N}$. Dann ist $n\Z = \left\langle n\right\rangle \leq u$.\\
 	Division mit Rest liefert $a, r \in \Z$ mit $a = qn + r$ und $0 \leq r \leq n$.
 	Dabei ist $r = a - \overbrace{qn}^{\in n\Z \subseteq U}$.
-	Nach Wahl von $n$ ist $r = 0$, d.h. $a = qn \in n\Z$.\\
+	Nach Wahl von $n$ ist $r = 0$, d.\,h. $a = qn \in n\Z$.\\
 	Damit ist gezeigt: $U = n\Z$.
 	
 	\item Nach \autoref{bem:10.7}(i) hat jede Untergruppe $V \subset \ZmZ{n}$ die Form $U/n\Z$, wobei $U$ eine Untergruppe von $\Z$ mit $n\Z \subseteq U$ ist. 
