--- a/kuelshammer-algebra1/Kapitel11.tex
+++ b/kuelshammer-algebra1/Kapitel11.tex
@@ -175,7 +175,7 @@ Eine Körpererweiterung $L\mid K$ endlichen Grades, heißt \highl{Galoiserweiterun
 % Bemerkung 11.3
 %%%%%%%%%%%%%%%%%%%
 \begin{bem}\label{bem:11.3}
-Gegebenenfalls ist $G \subseteq \Gal\left(L\mid K\right)$ und $\begin{array}{lcl}K & \subseteq & \Fix\left(\Gal\left(L\mid K\right)\right)\\ & \subseteq & \Fix\left(G\right) = K\end{array}$, d.h. $K = \Fix\left(\Gal\left(L\mid K\right)\right)$.
+Gegebenenfalls ist $G \subseteq \Gal\left(L\mid K\right)$ und $\begin{array}{lcl}K & \subseteq & \Fix\left(\Gal\left(L\mid K\right)\right)\\ & \subseteq & \Fix\left(G\right) = K\end{array}$, d.\,h. $K = \Fix\left(\Gal\left(L\mid K\right)\right)$.
 Eine Körpererweiterung $L\mid K$ endlichen Grades ist also genau dann eine Galoiserweiterung, wenn
 \[K = \Fix\left(\Gal\left(L\mid K\right)\right)\] ist.
 \end{bem}
@@ -215,8 +215,8 @@ Für $H \in \mathfrak{U}$ und $F := \Fix\left(H\right)$ gilt dabei:
 Nach \autoref{bem:11.3} ist $K = \Fix\left(G\right)$.
 Nach \autoref{satz:11.3} ist $\left|G\right| = \left[L:K\right]$.\\
 Sei $H \leq G$, $F :=\Fix\left(H\right)$ und $\widetilde{H} := \Gal\left(L\mid F\right)$.\\
-Dann: $H \leq \widetilde{H} \leq G$ und $K \subseteq F \subseteq \Fix\left(\widetilde{H}\right) \subseteq \Fix\left(H\right) = F$, d.h. $F = \Fix\left(\widetilde{H}\right)$.
-Nach \autoref{satz:11.3} ist $\left|H\right| = \left[L:F\right] = \left|\widetilde{H}\right|$, d.h. $H = \widetilde{H}$.
+Dann: $H \leq \widetilde{H} \leq G$ und $K \subseteq F \subseteq \Fix\left(\widetilde{H}\right) \subseteq \Fix\left(H\right) = F$, d.\,h. $F = \Fix\left(\widetilde{H}\right)$.
+Nach \autoref{satz:11.3} ist $\left|H\right| = \left[L:F\right] = \left|\widetilde{H}\right|$, d.\,h. $H = \widetilde{H}$.
 Dies zeigt, dass die Abbildung $\mathfrak{U} \mapsto \mathfrak{z} \mapsto \mathfrak{U}$ gleich $id_{\mathfrak{U}}$ ist.\\
 Sei umgekehrt $F \in \mathfrak{z}$, $H := \Gal\left(L\mid F\right)$ und $\widetilde{F} := \Fix\left(H\right)$.
 Dann: $K \subseteq F \subseteq \widetilde{F} \subseteq L$.\\
@@ -226,15 +226,15 @@ noch zu zeigen: $F = \widetilde{F}$\\
 Setze: \[\Hom_K\left(F, L\right) := \left\{\alpha\colon F\mapsto L\mid \alpha \text{ Körperhomomorphismus, } \alpha\left(x\right) = x, \ \forall x\in K\right\}.\]
 Dann ist die Abbildung \[G/H \mapsto \Hom_K\left(F, L\right), \ \sigma H\mapsto \sigma\mid F,\]
 wohldefiniert;
-denn für $\sigma \in G$, $\eta \in H$, $x \in F$ ist $\left(\sigma\eta\right)\left(x\right) = \sigma\left(\eta\left(x\right)\right) = \sigma\left(x\right)$, d.h. $\left(\sigma\eta\right)\mid F = \sigma\mid F$.\\
+denn für $\sigma \in G$, $\eta \in H$, $x \in F$ ist $\left(\sigma\eta\right)\left(x\right) = \sigma\left(\eta\left(x\right)\right) = \sigma\left(x\right)$, d.\,h. $\left(\sigma\eta\right)\mid F = \sigma\mid F$.\\
 Außerdem ist diese Abbildung injektiv;
-denn sind $\sigma, \tau \in G$ mit $\sigma\mid F = \tau\mid F$, so ist $\sigma\left(x\right) = \sigma\left(x\right)$, d.h. $\tau^{-1}\left(\sigma\left(x\right)\right) = x$ $\forall x \in F$.
-Daher ist $\tau^{-1} \circ \sigma \in \Gal\left(L\mid F\right) = H$, d.h. $\tau H = \sigma H$.\\
+denn sind $\sigma, \tau \in G$ mit $\sigma\mid F = \tau\mid F$, so ist $\sigma\left(x\right) = \sigma\left(x\right)$, d.\,h. $\tau^{-1}\left(\sigma\left(x\right)\right) = x$ $\forall x \in F$.
+Daher ist $\tau^{-1} \circ \sigma \in \Gal\left(L\mid F\right) = H$, d.\,h. $\tau H = \sigma H$.\\
 Also $\left|G:H\right| \leq \left|\Hom_K\left(F, L\right)\right|$.
 Jedes $\alpha \in \Hom_K\left(F, L\right)$ ist eine Fortsetzung der Inklusionsabbildung $K \mapsto L$.
 Nach \autoref{satz:11.1} ist 
 \[\left|\Hom_K\left(F, L\right)\right| \leq \left[F:K\right] \leq \left[\widetilde{F}:K\right] = \left|G:H\right|,\]
-d.h. $\left[F:K\right] = \left[\widetilde{F}:K\right]$ und $F = \widetilde{F}$.
+d.\,h. $\left[F:K\right] = \left[\widetilde{F}:K\right]$ und $F = \widetilde{F}$.
 \end{beweis}
 
 %%%%%%%%%%%%%%%%%%%
@@ -297,7 +297,7 @@ insbesondere gilt:
 	& \Leftrightarrow & \Fix\left(\sigma H\sigma^{-1}\right) = \Fix\left(H\right) \ \forall \sigma \in G\\
 	& \Leftrightarrow & \sigma\left(F\right) = F \ \forall \sigma \in G\end{array}\]
 	
-	\item Sei $H \taleq G$, d.h. $\sigma\left(F\right) = F \ \forall\sigma \in G$ wg. (iii).\\
+	\item Sei $H \taleq G$, d.\,h. $\sigma\left(F\right) = F \ \forall\sigma \in G$ wg. (iii).\\
 	Wir erhalten eine Abbildung
 	\[G \mapsto \Gal\left(F\mid K\right), \ \sigma \mapsto \sigma\mid F.\]
 	Diese ist offensichtlich ein Homomorphismus von Gruppen mit Kern $\left\{\sigma \in G\colon \sigma\mid F = id_F\right\} = \Gal\left(L\mid F\right) = H$.\\
@@ -307,14 +307,14 @@ insbesondere gilt:
 	Daher: $\left|\Gal\left(F\mid K\right)\right| \leq \left[F:K\right] = \left|G:H\right| \leq \Gal\left(F\mid K\right)$\\
 	Daher ist $\Phi$ ein Isomorphismus.\\
 	Ferner ist $\begin{array}[t]{lcl} K & \subseteq & \Fix{\left(\Gal{\left(F\mid K\right)}\right)}\\ & = & \Fix{\left(\left\{\sigma\mid F\colon \sigma \in G\right\}\right)}\\ & = & F \cap \Fix{\left(G\right)} = K\end{array}$\\
-	d.h. $K = \Fix{\left(\Gal{\left(F\mid K\right)}\right)}$ und $F\mid K$ Galoiserweiterung.\\
-	Sei umgekehrt $F\mid K$ Galoiserweiterung, d.h. $\abs{\Gal{\left(F\mid K\right)}} = \left[F:K\right]$.
+	d.\,h. $K = \Fix{\left(\Gal{\left(F\mid K\right)}\right)}$ und $F\mid K$ Galoiserweiterung.\\
+	Sei umgekehrt $F\mid K$ Galoiserweiterung, d.\,h. $\abs{\Gal{\left(F\mid K\right)}} = \left[F:K\right]$.
 	Jedes $\sigma \in \Gal{\left(F\mid K\right)}$ können wir als Element in $\Hom_K{\left(F, L\right)}$ auffassen.
 	Im Beweis von \autoref{satz:11.4} hatten wir gezeigt:
 	\[\abs{\Hom_K{\left(F, L\right)}} = \left[F:K\right] = \abs{\Gal{\left(F\mid K\right)}}.\]
 	Daher ist $\tau\left(F\right) \subseteq F$ für alle $\tau \in \Hom_K{\left(F, L\right)}$.
-	Für $\sigma \in G$ ist $\sigma\mid F \in \Hom_K{\left(F, L\right)}$, d.h. $\sigma\left(F\right) \subseteq F$.
-	Analog ist $\sigma^{-1}\left(F\right) \subseteq F$, d.h. $F \subseteq \sigma\left(F\right)$.
+	Für $\sigma \in G$ ist $\sigma\mid F \in \Hom_K{\left(F, L\right)}$, d.\,h. $\sigma\left(F\right) \subseteq F$.
+	Analog ist $\sigma^{-1}\left(F\right) \subseteq F$, d.\,h. $F \subseteq \sigma\left(F\right)$.
 	Insgesamt ist also $\sigma\left(F\right) = F$ für alle $\sigma \in G$. Nach (iii) ist $H \taleq G$.
 \end{enumerate}
 \end{beweis}
@@ -324,7 +324,7 @@ insbesondere gilt:
 %%%%%%%%%%%%%%%%%%%
 \begin{bsp}\label{bsp:11.5}
 Sei $K = \Q$ und $L = \Q\left(\sqrt[3]{2}, \rho\right)$ mit $\rho = -\frac{1}{2} + \frac{1}{2}\sqrt{-3}$.
-Dann: $0 = \rho^3-1 = \left(\rho - 1\right)\left(\rho^2 + \rho + 1\right)$, d.h. $\rho^2 + \rho + 1 = 0$.\\
+Dann: $0 = \rho^3-1 = \left(\rho - 1\right)\left(\rho^2 + \rho + 1\right)$, d.\,h. $\rho^2 + \rho + 1 = 0$.\\
 Das Minimalpolynom von $\rho$ über $\Q\left(\sqrt[3]{2}\right)$ ist $X^2 + X + 1$ $\left[\text{wegen } \Q\left(\sqrt[3]{2}\right) \subseteq \R \text{ und } \rho \notin \R\right]$.
 Also: $\left[\Q\left(\sqrt[3]{2}\right):\Q\right] = 3$, $\left[\Q\left(\sqrt[3]{2}, \rho\right):\Q\left(\sqrt[3]{2}\right)\right] = 2$, $\left[\Q\left(\sqrt[3]{2}, \rho\right):\Q\right] = 3 \cdot 2 = 6$ (Gradsatz).\\
 Genauer bilden $1, \sqrt[3]{2}, \sqrt[3]{2}^2 = \sqrt[3]{4}$ eine $\Q$--Basis von $L$.\\
@@ -332,8 +332,8 @@ Wir berechnen $G:= \Gal{\left(L\mid \Q\right)}$.\\
 Wie findet man Elemente in $\Gal{\left(L\mid \Q\right)}$.?\\
 Jedes $\sigma \in \Gal{\left(L\mid \Q\right)}$ ist eindeutig bestimmt durch $\sigma\left(\sqrt[3]{2}\right)$ und $\sigma\left(\rho\right)$;
 dabei gilt: $\sigma\left(\sqrt[3]{2}\right)^3 = \sigma\left(2\right) = 2$ und $\begin{array}[t]{lcl} & & \sigma\left(\rho\right)^2 + \sigma\left(\rho\right) + 1\\ & = &  \sigma\left(\rho^2 + \rho + 1\right) = \sigma\left(0\right) = 0\end{array}$\\
-d.h. $\sigma\left(\sqrt[3]{2}\right) \in \left\{\sqrt[3]{2}, \rho\sqrt[3]{2}, \rho^2\sqrt[3]{2}\right\}$ und $\sigma\left(\rho\right) \in \left\{\rho, \rho^2\right\}$.\\
-Daher gibt es höchstens 6 Möglichkeiten für $\sigma$, d.h. $\abs{\Gal{\left(L\mid \Q\right)}} \leq 6$.\\
+d.\,h. $\sigma\left(\sqrt[3]{2}\right) \in \left\{\sqrt[3]{2}, \rho\sqrt[3]{2}, \rho^2\sqrt[3]{2}\right\}$ und $\sigma\left(\rho\right) \in \left\{\rho, \rho^2\right\}$.\\
+Daher gibt es höchstens 6 Möglichkeiten für $\sigma$, d.\,h. $\abs{\Gal{\left(L\mid \Q\right)}} \leq 6$.\\
 Es existiert genau eine $\Q\left(\rho\right)$--lineare Abbildung: $\alpha\colon L\mapsto L$ mit $1\mapsto 1$, $\sqrt[3]{2}\mapsto\rho\sqrt[3]{2}$, $\sqrt[3]{4}\mapsto\rho^2\sqrt[3]{4} = \left(-\rho - 1\right)\sqrt[3]{4}$.
 Dies ist ein Körperautomorphismus;
 zum Beweis genügt zu zeigen:
@@ -362,14 +362,14 @@ Aus dem Gradsatz folgt außerdem:
 \end{array}\]
 Daher: $L\mid\Q$ Galoiserweiterung und $\abs{G} = 6$.\randbem{Grad der Körpererweiterung}\\
 Wegen $\sqrt[3]{2} \labelarrow{\alpha} \rho\sqrt[3]{2} \labelarrow{\alpha} \rho^2\sqrt[3]{2} \labelarrow{\alpha} \underbrace{\rho^3}_{\rho^3 = 1}\sqrt[3]{2} = \sqrt[3]{2}$ ist $\alpha^3 = 1$.
-Daher hat $\alpha$ Ordnung 3, d.h. $\abs{\left\langle \alpha\right\rangle} = 3$ und $\abs{G:\left\langle \alpha\right\rangle} = 2$.
+Daher hat $\alpha$ Ordnung 3, d.\,h. $\abs{\left\langle \alpha\right\rangle} = 3$ und $\abs{G:\left\langle \alpha\right\rangle} = 2$.
 Nach \autoref{bsp:10.2}(iv) ist $\left\langle \alpha\right\rangle \taleq G$.\\
 Analog ist $\overbrace{\beta^2 = 1}^{\text{weil } \rho^3 = 1 \Rightarrow \rho^4 = \rho}$.
-Nach dem 1. Isomorphiesatz (\autoref{satz:10.6}) ist $\left\langle \alpha\right\rangle \left\langle \beta\right\rangle \leq G$ und $\abs{\left\langle \alpha\right\rangle \left\langle \beta\right\rangle} = \nicefrac{\underbrace{\abs{\left\langle \alpha\right\rangle}}_{=3} \cdot \underbrace{\abs{\left\langle \beta\right\rangle}}_{= 2}}{\underbrace{\abs{\left\langle \alpha\right\rangle \cap \left\langle \beta\right\rangle}}_{= 1}} = 6$, d.h. $G = \left\langle \alpha\right\rangle \left\langle \beta\right\rangle = \left\{\alpha^i\beta^j\colon i = 0, 1, 2, j = 0, 1\right\}$.\\
-Man rechnet leicht nach: $\beta\alpha\beta^{-1} = \alpha^{-1}$, d.h. $\beta\alpha = \alpha^2\beta$.\\
+Nach dem 1. Isomorphiesatz (\autoref{satz:10.6}) ist $\left\langle \alpha\right\rangle \left\langle \beta\right\rangle \leq G$ und $\abs{\left\langle \alpha\right\rangle \left\langle \beta\right\rangle} = \nicefrac{\underbrace{\abs{\left\langle \alpha\right\rangle}}_{=3} \cdot \underbrace{\abs{\left\langle \beta\right\rangle}}_{= 2}}{\underbrace{\abs{\left\langle \alpha\right\rangle \cap \left\langle \beta\right\rangle}}_{= 1}} = 6$, d.\,h. $G = \left\langle \alpha\right\rangle \left\langle \beta\right\rangle = \left\{\alpha^i\beta^j\colon i = 0, 1, 2, j = 0, 1\right\}$.\\
+Man rechnet leicht nach: $\beta\alpha\beta^{-1} = \alpha^{-1}$, d.\,h. $\beta\alpha = \alpha^2\beta$.\\
 Jede echte Untergruppe von $G$ hat Ordnung 1, 2 oder 3, ist also zyklisch \randbem{weil Ordnung prim ist}.
 Daher sind $\underbrace{\left\{1\right\}}_{Ord 1}$, $\underbrace{\left\langle \alpha\right\rangle}_{Ord 3} = \left\langle \alpha^{-1}\right\rangle$, $\underbrace{\left\langle \beta\right\rangle}_{Ord 2}$, $\underbrace{\left\langle \alpha\beta\right\rangle}_{Ord 2}$, $\underbrace{\left\langle \alpha^2\beta\right\rangle}_{Ord 2}$, $G$ die einzigen Untergruppen von $G$, diese haben Ordnungen 1, 3, 2, 2, 2, 6.\\
-(z.B.: ist $\alpha \beta^2 = \alpha \beta \alpha \beta = \alpha \alpha^2 \beta \beta = \alpha^3 \beta^2 = 1 \cdot 1 = 1$)\\
+(z.\,B.: ist $\alpha \beta^2 = \alpha \beta \alpha \beta = \alpha \alpha^2 \beta \beta = \alpha^3 \beta^2 = 1 \cdot 1 = 1$)\\
 Wir berechnen die entsprechenden Fixkörper. Dazu gibt es (mindestens) 2 Methoden:
 \begin{itemize}
 	\item[1. Methode:] Für $H \leq G$ ist:
@@ -381,12 +381,12 @@ Wir berechnen die entsprechenden Fixkörper. Dazu gibt es (mindestens) 2 Methoden
 	Dabei ist jedes $\sigma - id_L$ eine $K$--lineare Abbildung.
 	Damit ist die Berechnung von $\Fix{\left(H\right)}$ auf die Lösung eines homogenen linearen Gleichungssystems zurückgeführt.
 	
-	\item[2. Methode:] Für $x \in L$ (z.B. $x$ Element einer $K$--Basis von $L$) sei $T_H\left(x\right) := \sum\limits_{\sigma \in H}\sigma\left(x\right)$.\\
+	\item[2. Methode:] Für $x \in L$ (z.\,B. $x$ Element einer $K$--Basis von $L$) sei $T_H\left(x\right) := \sum\limits_{\sigma \in H}\sigma\left(x\right)$.\\
 	Für $\tau \in H$ ist dann $\begin{array}[t]{lcl}\tau\left(T_H\left(x\right)\right) & = & \sum\limits_{\sigma \in H}\tau\left(\sigma\left(x\right)\right)\\ & = & \sum\limits_{\sigma' \in H}\sigma'\left(x\right)\\ & = & T_H\left(x\right)\end{array}$,\\
-	d.h. $T_H\left(x\right) \in \Fix{\left(H\right)}$.\\
+	d.\,h. $T_H\left(x\right) \in \Fix{\left(H\right)}$.\\
 	Wir betrachten den Spezialfall $H = \left\langle \alpha\beta\right\rangle$:
 	\[\sqrt[3]{2} \labelarrow{\beta} \sqrt[3]{2} \labelarrow{\alpha} \rho\sqrt[3]{2}, \ \ T_H\left(\sqrt[3]{2}\right) = \sqrt[3]{2} + \rho\sqrt[3]{2} = \left(1 + \rho\right)\sqrt[3]{2},\]
-	d.h. $\Fix{\left(\left\langle \alpha\beta\right\rangle\right)} = \Q\left(\left(1 + \rho\right)\sqrt[3]{2}\right)$\\
+	d.\,h. $\Fix{\left(\left\langle \alpha\beta\right\rangle\right)} = \Q\left(\left(1 + \rho\right)\sqrt[3]{2}\right)$\\
 	Analog betrachten wir den Fall: $H = \left\langle \alpha^2\beta\right\rangle$:\\
 	\[\sqrt[3]{2} \labelarrow{\alpha\beta} \rho\sqrt[3]{2} \labelarrow{\alpha} \rho^2\sqrt[3]{2} = \left(-\rho-1\right)\sqrt[3]{2}, \ \ T_H\left(\sqrt[3]{2}\right) = \sqrt[3]{2} + \left(-\rho-1\right)\sqrt[3]{2} = -\rho\sqrt[3]{2}\]
 	Folglich: $\Fix{\left(\left\langle \alpha^2\beta\right\rangle\right)} = \Q\left(\rho\sqrt[3]{2}\right)$.
@@ -467,7 +467,7 @@ Man nennt $L$ Zerfällungskörper von $\varphi$ über $K$, falls $\varphi$ in $L\le
 \begin{satz}\label{satz:11.7}
 Sei $L\mid K$ Galoiserweiterung.\\
 Dann existiert ein $b\in L$ mit $L = K\left(b\right)$.\\
-Das Minimalpolynom $\mu$ von $b$ über $K$ zerfällt in $L\left[X\right]$ in paarweise verschiedene Linearfaktoren [d.h. $\mu = \left(X - b_1\right) \ldots \left(X - b_n\right)$ mit paarweise verschiedenen $b_1, \ldots, b_n \in L$];
+Das Minimalpolynom $\mu$ von $b$ über $K$ zerfällt in $L\left[X\right]$ in paarweise verschiedene Linearfaktoren [d.\,h. $\mu = \left(X - b_1\right) \ldots \left(X - b_n\right)$ mit paarweise verschiedenen $b_1, \ldots, b_n \in L$];
 insbesondere ist $L$ Zerfällungskörper von $\mu$ über $K$.
 \end{satz}
 
@@ -491,7 +491,7 @@ Für $\sigma \in G$ ist außerdem
 	& = & \sigma\left(b^n + a_{n-1}b^{n-1} + \ldots + a_1b + a_0\right)\\
 	& = & \sigma\left(\mu\left(b\right)\right) = \sigma\left(0\right) = 0,
 \end{array}\]
-d.h. $\sigma\left(b\right)$ ist Nullstelle von $\mu$.\\
+d.\,h. $\sigma\left(b\right)$ ist Nullstelle von $\mu$.\\
 Also: $\mu = \prod\limits_{\sigma \in G}\left(X - \sigma\left(b\right)\right)$, und der Satz ist in diesem Fall bewiesen.
 
 Sei jetzt $\abs{K} < \infty$, also ist auch $q := \abs{L} < \infty$.\\
@@ -533,6 +533,6 @@ Andererseits ist $K \subseteq \Fix{\left(\Gal{\left(L\mid K\right)}\right)}$ und
 & \geq & \left[L:K\right]\\
 & \geq & \left[L:\Fix{\left(\Gal{\left(L\mid K\right)}\right)}\right],
 \end{array}\]
-d.h. $K = \Fix{\left(\Gal{\left(L\mid K\right)}\right)}$.\\
+d.\,h. $K = \Fix{\left(\Gal{\left(L\mid K\right)}\right)}$.\\
 Also: $L\mid K$ Galoiserweiterung.
 \end{beweis}
