--- a/kuelshammer-algebra1/Kapitel15.tex
+++ b/kuelshammer-algebra1/Kapitel15.tex
@@ -19,7 +19,7 @@ Man sagt auch: "`$G$ operiert auf $\Omega$"' oder "`$\Omega$ ist eine $G$--Menge
 Seien $G$ eine Gruppe und $\Omega$ eine $G$--Menge.
 Für $g\in G$ ist dann
 \[\tau_g\colon\Omega\mapsto\Omega, \alpha\mapsto {}^g\alpha,\]
-bijektiv, d.h. $\tau_g\in\Sym\left(\Omega\right)$.
+bijektiv, d.\,h. $\tau_g\in\Sym\left(\Omega\right)$.
 Außerdem ist die Abbildung
 \[\tau\colon G\mapsto\Sym\left(\Omega\right), g\mapsto\tau_g,\]
 ein Homomorphismus.
@@ -29,7 +29,7 @@ ein Homomorphismus.
 % Beweis
 %%%%%%%%%%%%%%%%%%%
 \begin{beweis}
-Für $g,h\in G$, $\alpha\in\Omega$ ist $\left(\tau_g\circ\tau_h\right)\left(\alpha\right) = {}^g\left({}^h\alpha\right) = {}^{gh}\alpha = \tau_{gh}\left(\alpha\right)$ und $\tau_1\left(\alpha\right) = {}^1\alpha = 1$, d.h. $\tau_g\circ\tau_h=\tau_{gh}$ und $\tau_1=id_{\Omega}$.
+Für $g,h\in G$, $\alpha\in\Omega$ ist $\left(\tau_g\circ\tau_h\right)\left(\alpha\right) = {}^g\left({}^h\alpha\right) = {}^{gh}\alpha = \tau_{gh}\left(\alpha\right)$ und $\tau_1\left(\alpha\right) = {}^1\alpha = 1$, d.\,h. $\tau_g\circ\tau_h=\tau_{gh}$ und $\tau_1=id_{\Omega}$.
 Daher ist $\tau_g$ bijektiv.
 Die Behauptung folgt.
 \end{beweis}
@@ -82,10 +82,10 @@ Dann heißt:
 \[\Ker\left(\tau\right) = \left\{g\in G\colon\tau_g=id_{\Omega}\right\} = \left\{g\in G\colon {}^g\alpha=\alpha  \ \ \text{ für alle } \alpha\in\Omega\right\}\]
 der \highl{Gruppe!Operation!Kern}{Kern} der Operation.
 
-Ist $\Ker\left(\tau\right) = G$ [d.h. ${}^g\alpha=\alpha$ für alle $g\in G$, $x\in\Omega$], so nennt man die Operation \highl{Gruppe!Operation!trivial}{trivial}.
+Ist $\Ker\left(\tau\right) = G$ [d.\,h. ${}^g\alpha=\alpha$ für alle $g\in G$, $x\in\Omega$], so nennt man die Operation \highl{Gruppe!Operation!trivial}{trivial}.
 Man sagt: "`$G$ operiert trivial auf $\Omega$"'.
 
-Ist dagegen $\Ker\left(\tau\right) = \left\{1\right\}$ [d.h. $\tau$ ist injektiv], so nennt man die Operation \highl{Gruppe!Operation!treu}{treu}.
+Ist dagegen $\Ker\left(\tau\right) = \left\{1\right\}$ [d.\,h. $\tau$ ist injektiv], so nennt man die Operation \highl{Gruppe!Operation!treu}{treu}.
 Gegebenenfalls ist $G \cong \tau\left(G\right) \leq \Sym\left(\Omega\right)$.
 \end{defi}
 
@@ -122,7 +122,7 @@ Dann ist $\sim$ eine Äquivalenzrelation.
 \begin{itemize}
 	\item[\underline{Reflexivität:}] ${}^1\alpha = \alpha$
 	
-	\item[\underline{Symmetrie:}] $\alpha\sim\beta\Rightarrow\exists g\in G\colon {}^g\alpha=\beta\Rightarrow g^{-1}\in G$ und $g^{-1}\beta = {}^{g^{-1}}\left({}^g\alpha\right) = {}^{g^{-1}g}\alpha=\alpha$, d.h. $\beta\sim\alpha$
+	\item[\underline{Symmetrie:}] $\alpha\sim\beta\Rightarrow\exists g\in G\colon {}^g\alpha=\beta\Rightarrow g^{-1}\in G$ und $g^{-1}\beta = {}^{g^{-1}}\left({}^g\alpha\right) = {}^{g^{-1}g}\alpha=\alpha$, d.\,h. $\beta\sim\alpha$
 	
 	\item[\underline{Transisivität:}] $\alpha\sim\beta\wedge\beta\sim\gamma\Rightarrow\exists g,h\in G\colon {}^g\alpha=\beta\wedge {}^h\beta=\gamma \Rightarrow h\cdot g\in G\wedge {}^{hg}\alpha = {}^h\beta=\gamma\Rightarrow\alpha\sim\beta$.
 \end{itemize}
@@ -169,7 +169,7 @@ $G_\alpha$ heißt \highl{Gruppe!Stabilisator}{Stabilisator} von $\alpha$ in $G$.
 \begin{beweis}
 Wegen ${}^1\alpha=\alpha$ ist $1\in G_{\alpha}$.
 Für $g,h\in G_\alpha$ ist ${}^g\alpha=\alpha={}^h\alpha$.
-Daher ist ${}^{g^{-1}h}\alpha = g^{-1}\left({}^h\alpha\right) = {}^{g^{-1}}\left({}^g\alpha\right) = {}^{g^{-1}g}\alpha = {}^1\alpha = \alpha$, d.h. $g^{-1}h\in G_\alpha$.
+Daher ist ${}^{g^{-1}h}\alpha = g^{-1}\left({}^h\alpha\right) = {}^{g^{-1}}\left({}^g\alpha\right) = {}^{g^{-1}g}\alpha = {}^1\alpha = \alpha$, d.\,h. $g^{-1}h\in G_\alpha$.
 Also: $G_\alpha \leq G$.\\
 Für $g,h\in G$ gilt
 \[{}^g\alpha={}^h\alpha\Leftrightarrow\alpha={}^{g^{-1}h}\alpha\Leftrightarrow g^{-1}h\in G_\alpha\Leftrightarrow gG_\alpha=hG_\alpha.\]
@@ -187,7 +187,7 @@ Jede Gruppe $G$ operiert auf sich selbst durch Konjugation:
 denn ${}^1x = 1x1^{-1} = x$ und ${}^g\left({}^hx\right) = {}^g\left(hxh^{-1}\right) = ghxh^{-1}g^{-1} = \left(gh\right)x\left(gh\right)^{-1} = {}^{gh}x \ \ \left(g,h,x\in G\right)$
 
 Die Bahn von $x\in G$ ist dabei die Konjugationsklasse $K_x = \left\{gxg^{-1}\colon g\in G\right\}$.
-Liegen $x,y\in G$ in der gleichen Konjugationsklasse [d.h. es existiert ein $g\in G$ mit $y=gxg^{-1}$], so heißen $x,y$ konjugiert in $G$.
+Liegen $x,y\in G$ in der gleichen Konjugationsklasse [d.\,h. es existiert ein $g\in G$ mit $y=gxg^{-1}$], so heißen $x,y$ konjugiert in $G$.
 
 Der Stabilisator von $x\in G$ unter Konjugationsoperation ist
 \[\left\{g\in G\colon gxg^{-1} = x\right\} = \left\{g\in G\colon gx=xg\right\} =: C_G\left(x\right);\]
@@ -220,7 +220,7 @@ Für $p\in\PZ$ und jede endliche $p$--Gruppe $P \neq \left\{1\right\}$ gilt: $Z\l
 % Beweis
 %%%%%%%%%%%%%%%%%%%
 \begin{beweis}
-Seien $K_1,\ldots,K_t$ die Konjugationklassen von $P$, o.B.d.A. $\abs{K_i} = 1$ für $i=1\ldots,s$ und $\abs{K_i} > 1$ für $i=s+1,\ldots,t$.\\
+Seien $K_1,\ldots,K_t$ die Konjugationklassen von $P$, \OE{} $\abs{K_i} = 1$ für $i=1\ldots,s$ und $\abs{K_i} > 1$ für $i=s+1,\ldots,t$.\\
 Dann: $K_1\cup\ldots\cup K_s = Z\left(P\right)$ und $\abs{K_i} \equiv 0\pmod{p}$ für $i=s+1,\ldots,t$.\\
 Also: $0\equiv\abs{P}=\abs{K_1}+\ldots+\abs{K_t} =\abs{Z\left(P\right)}+\abs{K_{s+1}}+\ldots+\abs{K_t}\equiv\abs{Z\left(P\right)}\pmod{p}$.\\
 Daher: $Z\left(P\right) \neq \left\{1\right\}$.
