--- a/kuelshammer-algebra1/Kapitel9.tex
+++ b/kuelshammer-algebra1/Kapitel9.tex
@@ -31,7 +31,7 @@ Die Punkte in $M_{\infty} := \bigcup\limits_{i = 0}^{\infty}M_i$ heißen dann \hi
 % Satz 9.1
 %%%%%%%%%%%%%%%%%%%
 \begin{satz}\label{satz:9.1}
-Für jede Teilmenge $M \subseteq C$ mit $0, 1 \in M$ ist $M_{\infty}$ ein Teilkörper von $\C$, der mit einer komplexen Zahl $z$ auch $\overline{z}$ und jede Quadratwurzel aus $z$ enthält\randbem{D.h. $M_{\infty}$ abgeschlossen gegenüber $+, -, \cdot, :, -, \sqrt{ \ }$}.
+Für jede Teilmenge $M \subseteq C$ mit $0, 1 \in M$ ist $M_{\infty}$ ein Teilkörper von $\C$, der mit einer komplexen Zahl $z$ auch $\overline{z}$ und jede Quadratwurzel aus $z$ enthält\randbem{d.\,h. $M_{\infty}$ abgeschlossen gegenüber $+, -, \cdot, :, -, \sqrt{ \ }$}.
 \end{satz}
 
 %%%%%%%%%%%%%%%%%%%
@@ -118,7 +118,7 @@ Für jede Teilmenge $M \subseteq C$ mit $0, 1 \in M$ ist $M_{\infty}$ ein Teilkör
 	\CloseGraph
 	
 	\item $w, z \in M_{\infty} \Rightarrow w \cdot z \in M_{\infty}$:\\
-	o.B.d.A.: $w, z \in M_{\infty} \cap \R$, $\overbrace{w}^{\text{sonst (ii)}}, z > 0$\\
+	\OE{}: $w, z \in M_{\infty} \cap \R$, $\overbrace{w}^{\text{sonst (ii)}}, z > 0$\\
 	\InitGraph{4}{4}{0.2}{0.2}{1cm}
 	\Axes
 	\MedPointAt(0, 3)
@@ -129,7 +129,7 @@ Für jede Teilmenge $M \subseteq C$ mit $0, 1 \in M$ ist $M_{\infty}$ ein Teilkör
 	\TextAt(0, 1)[l]{$w \operatorname{i}$}
 	\TextAt(3, 0)[b]{$z$}
 	\TextAt(1, 0)[b]{$1$}
-	\TextAt(2, 2)[r]{Strahlensatz: $\frac{z}{1} = \frac{x}{w}$, d.h. $x = z \cdot w$}
+	\TextAt(2, 2)[r]{Strahlensatz: $\frac{z}{1} = \frac{x}{w}$, d.\,h. $x = z \cdot w$}
 	\LineAt(-0.5, 1.5, 1.5, -0.5)
 	\SetDashed
 	\LineAt(-0.5, 3.5, 3.5, -0.5)
@@ -137,7 +137,7 @@ Für jede Teilmenge $M \subseteq C$ mit $0, 1 \in M$ ist $M_{\infty}$ ein Teilkör
 	\CloseGraph
 	
 	\item $z \in M_{\infty} \Rightarrow \frac{1}{z} = \frac{\overline{z}}{z \cdot \overline{z}} \in M_{\infty}$:\\
-	o.B.d.A.: $z \in \R, z > 0$\\
+	\OE{}: $z \in \R, z > 0$\\
 	\InitGraph{4}{4}{0.2}{0.2}{1cm}
 	\Axes
 	\MedPointAt(0, 3)
@@ -159,8 +159,8 @@ Für jede Teilmenge $M \subseteq C$ mit $0, 1 \in M$ ist $M_{\infty}$ ein Teilkör
 	Schreibe: $z = \left|z\right|\left(\cos\varphi + \operatorname{i} \cdot \sin\varphi\right)$.\\
 	Dann: $\sqrt{z} = \sqrt{\left|z\right|}\left(\cos\frac{\varphi}{2} + \operatorname{i} \cdot \sin\frac{\varphi}{2}\right)$.\\
 	Winkelhalbierung mit Zirkel und Lineal bekanntlich möglich.\\
-	o.B.d.A.: $z \in \R, z > 0$:\\
-	Höhensatz: $x^2 = 1 \cdot z$, d.h. $x = \sqrt{z}$\\
+	\OE{}: $z \in \R, z > 0$:\\
+	Höhensatz: $x^2 = 1 \cdot z$, d.\,h. $x = \sqrt{z}$\\
 	\InitGraph{5}{3.5}{1.5}{1}{1cm}
 	\Axes
 	\MedPointAt(0, 1.722)
@@ -198,7 +198,7 @@ Für jeden Teilkörper $L \subseteq C$ mit $L = \overline{L} $\randbem{$L = \overl
 %%%%%%%%%%%%%%%%%%%
 \begin{beweis}
 \begin{enumerate}[(i)]
-	\item Seien $a, b, c, d \in L$ mit $\left(a + \R b\right) \cap \left(c + \R d\right) = \left\{z\right\}$, d.h. $a + \lambda b = z = c + \mu d$ für geeignete $\lambda, \mu \in \R$.\\
+	\item Seien $a, b, c, d \in L$ mit $\left(a + \R b\right) \cap \left(c + \R d\right) = \left\{z\right\}$, d.\,h. $a + \lambda b = z = c + \mu d$ für geeignete $\lambda, \mu \in \R$.\\
 	Dann ist $\left(\lambda, \mu\right)$ die einzige Lösung des linearen Gleichungssystems:
 	\[\begin{array}{lcl}
 		\lambda\Re\left(b\right) - \mu\Re\left(d\right) & = & \Re\left(c - d\right)\\
@@ -244,7 +244,7 @@ $z$ ist aus $m$ konstruierbar $\Leftrightarrow \exists$ Folge von Teilkörpern
 		\item["`$\Rightarrow$"'] Die angegebene Bedingung sei erfüllt. Nach \autoref{satz:9.1} ist $\Q\left(M \cup \overline{M}\right) \subseteq M_{\infty}$. Sei also $n \in \left\{1, \ldots, m\right\}$ mit $L_{n-1} \subseteq M_{\infty}$, und sei $x \in L_n \backslash L_{n-1}$. Dann ist $L_n = L_{n-1}\left(x\right)$ und das Minimalpolynom von $x$ über $L_{n-1}$ hat die Form $\mu = X^2 + aX + b \ \left(a, b \in L_{n-1}\right)$.\\
 		Also: $\left(x + \frac{a}{2}\right)^2 = x^2 + ax + \frac{a^2}{4} = \frac{a^2}{4} - b \in L_{n-1} \subseteq M_{\infty}$, also auch $x + \frac{a}{2} \in M_{\infty}$ nach 9.1. Damit $L_n = L_{n-1}\left(x + \frac{a}{2}\right) \subseteq M_{\infty}$.\\
 		Insbesondere $z \in M_{\infty}$.
-		\item["`$\Leftarrow$"'] Sei $z \in M_{\infty}$, also $z \in M$, für ein $k \in \N_{0}$, o.B.d.A. $k \in \N$. Dann ist $z$ in einem Schritt aus endlich vielen Punkten $y_1, \ldots, y_n \in M_{k-1}$ konstruierbar. Wir können annehmen, dass für $y_1, \ldots, y_n$ die Behauptung schon gilt. Für $j = 1, \ldots, n$ existiert also eine Folge $\Q\left(M \cup \overline{M}\right) = L_{j_0} \subseteq L_{j_1} \subseteq \ldots \subseteq L_{j_n}$ von Teilkörpern von $\C$ mit $y_j \in L_{j_{e_j}}$ und $\left[L_{j_k}:L_{j_{k-1}}\right] = 2$ für $k = 1, \ldots, e_j$. Jedes $L_{j_k}$ entsteht aus $L_{j, k-1}$ durch Adjunktion einer Quadratwurzel. Adjungiert man zu $\Q\left(M \cup \overline{M}\right)$ nacheinander all diese Quadratwurzeln, so erhält man eine Folge von Teilkörpern $\Q\left(M \cup \overline{M}\right) = K_0 \subseteq K_1 \subseteq \ldots \subseteq K_r$ von $\C$ mit $i, y_1, \ldots, y_n \in K_r = \overline{K_r}$. Aus \autoref{satz:9.2} folgt die Behauptung für $z$.
+		\item["`$\Leftarrow$"'] Sei $z \in M_{\infty}$, also $z \in M$, für ein $k \in \N_{0}$, \OE{} $k \in \N$. Dann ist $z$ in einem Schritt aus endlich vielen Punkten $y_1, \ldots, y_n \in M_{k-1}$ konstruierbar. Wir können annehmen, dass für $y_1, \ldots, y_n$ die Behauptung schon gilt. Für $j = 1, \ldots, n$ existiert also eine Folge $\Q\left(M \cup \overline{M}\right) = L_{j_0} \subseteq L_{j_1} \subseteq \ldots \subseteq L_{j_n}$ von Teilkörpern von $\C$ mit $y_j \in L_{j_{e_j}}$ und $\left[L_{j_k}:L_{j_{k-1}}\right] = 2$ für $k = 1, \ldots, e_j$. Jedes $L_{j_k}$ entsteht aus $L_{j, k-1}$ durch Adjunktion einer Quadratwurzel. Adjungiert man zu $\Q\left(M \cup \overline{M}\right)$ nacheinander all diese Quadratwurzeln, so erhält man eine Folge von Teilkörpern $\Q\left(M \cup \overline{M}\right) = K_0 \subseteq K_1 \subseteq \ldots \subseteq K_r$ von $\C$ mit $i, y_1, \ldots, y_n \in K_r = \overline{K_r}$. Aus \autoref{satz:9.2} folgt die Behauptung für $z$.
 	\end{itemize}
 \end{beweis}
 
@@ -267,7 +267,7 @@ Für $z \in M_{\infty}$ ist also insbesondere $\left[\Q\left(M \cup \overline{M},
 	Zu einem gegebenen Kreis mit Radius 1 konstruiere man ein Quadrat mit dem gleichen Flächeninhalt. Für die Seitenlänge $x$ des gesuchten Qudrates gilt also $x^2 = \pi$. Wäre $\sqrt{\pi}$ aus $\left\{0, 1\right\}$ konstruierbar, so auch $\pi$. Dann wäre $\left[\Q\left(\pi\right):\Q\right]$ eine Potenz von 2, also wäre $\pi$ algebraisch über $\Q$. Man kann zeigen, dass $\pi$ transzendent über $\Q$ ist (\textsc{Lindemann} 1852--1939). Daher ist die Quadratur des Kreises unmöglich.
 	
 	\item Rektifikation des Kreises:\\
-	Zu einem gegebenen Kreis $K$ konstruiere man eine Strecke, deren Länge $x$ gleich dem Umfang von $K$ ist. O.B.d.A. habe $K$ Radius 1. Es gilt also: $x = 2\pi$. Da $\pi$ transzendent über $\Q$ ist, ist das nicht möglich.
+	Zu einem gegebenen Kreis $K$ konstruiere man eine Strecke, deren Länge $x$ gleich dem Umfang von $K$ ist. \OE{} habe $K$ Radius 1. Es gilt also: $x = 2\pi$. Da $\pi$ transzendent über $\Q$ ist, ist das nicht möglich.
 	
 	\item Dreiteilung von Winkeln:\randbem{beliebige Winkel!}\\
 	Zu einem gegebenen Winkel $\varphi$ soll der Winkel $\frac{\varphi}{3}$ konstruiert werden. Die Frage ist also, ob $e^{\frac{i\varphi}{3}}$ aus $\left\{0, 1, e^{i\varphi}\right\}$ konstruiert werden kann. Äquivalent dazu ist die Konstruierbarkeit von $x = \cos{\frac{\varphi}{3}}$ aus $\left\{0, 1, \cos{\varphi}\right\}$. Wegen 
@@ -297,7 +297,7 @@ Für $z \in M_{\infty}$ ist also insbesondere $\left[\Q\left(M \cup \overline{M},
 		& = & (\rho^2 + \rho^{-2}) + \left(\rho + \rho^{-1}\right) + 1
 	\end{array}\]
 	Für $\eta = \rho + \rho^{-1} = 2\cos{\frac{2\pi}{5}}$ gilt $\eta^2 = \rho^2 + \rho^{-2} + 2$. Also gilt:
-	\[0 = \left(\eta^2 - 2\right) + \eta + 1 = \eta^2 + \eta - 1 \text{,d.h. } \eta = -\frac{1}{2} + \frac{\sqrt{5}}{2}\]
+	\[0 = \left(\eta^2 - 2\right) + \eta + 1 = \eta^2 + \eta - 1 \text{,d.\,h. } \eta = -\frac{1}{2} + \frac{\sqrt{5}}{2}\]
 	Daher ist $\eta$ aus $\left\{0, 1\right\}$ konstruierbar. Folglich ist auch $\rho$ aus $\left\{0, 1\right\}$ konstruierbar.
 	Wegen $\eta^2 = \rho^2 + \overbrace{\rho^3}^{= \rho^{-2}\text{, da }\rho^5 = 1} + 2$ ist
 	\[0 = \rho^2 + \rho\left(\rho^3 + \rho^2 + 1\right) + 1 = \rho^2 + \rho\left(\eta^2 - 1\right) + 1 = \rho^2 + \rho\left(\frac{1}{2} - \frac{\sqrt{5}}{2}\right) + 1\]
@@ -396,7 +396,7 @@ reduziert.
 	Äquivalent: $0 = Z^3 + 5Z^2 + 16Z + 30$. Eine Lösung ist $Z = -3$\\
 	Man erhält: $\left(Y^2 - 3\right)^2 = 4\left(Y + \frac{20}{8}\right)^2 = \left(2Y + 5\right)^2$\\
 	Also: $Y^2 - 3 = 2Y + 5$ oder $Y^2 - 3 = -2Y - 5$\\
-	d.h.: $Y^2 - 2Y - 8 = 0$ oder $Y^2 + 2Y + 2 = 0$, d.h. $Y \in \left\{-2, -4, -1 + i, -1 - i\right\}$
+	d.\,h.: $Y^2 - 2Y - 8 = 0$ oder $Y^2 + 2Y + 2 = 0$, d.\,h. $Y \in \left\{-2, -4, -1 + i, -1 - i\right\}$
 \end{itemize}
 \end{bem}
 
