--- a/kuelshammer-algebra1/Kapitel12.tex
+++ b/kuelshammer-algebra1/Kapitel12.tex
@@ -29,9 +29,9 @@ Dann existiert immer ein Ergänzungskörper $L \supseteq K$, in dem $\varphi$ eine
 % Beweis
 %%%%%%%%%%%%%%%%%%%
 \begin{beweis}
-(Gegebenenfalls ist $K\left(b\right) \cong K\left[X\right] / \left(\varphi\right)$; wir werden daher versuchen, $L$ auf diese Weise zu konstruieren.)\\
+(Gegebenenfalls ist $K\left(b\right) \cong K\left[X\right] / \left(\varphi\right)$; wir werden Daher versuchen, $L$ auf diese Weise zu konstruieren.)\\
 Da $\varphi \in K\left[X\right]$ irreduzibel ist, ist $\widetilde{L} := K\left[X\right]/\left(\varphi\right)$ ein Körper, und $\sigma\colon K\mapsto \widetilde{L}$, $a\mapsto a + \left(\varphi\right)$, ein Ringhomomorphismus.\\
-Für $0 \neq a \in K$ ist dabei $\sigma\left(a\right)\sigma\left(a^{-1}\right) = \sigma\left(aa^{-1}\right) = \sigma\left(1\right) = 1 + \left(\varphi\right) = 1_{\widetilde{L}}$, d.h. $\sigma\left(a\right) \neq 0$.\\
+Für $0 \neq a \in K$ ist dabei $\sigma\left(a\right)\sigma\left(a^{-1}\right) = \sigma\left(aa^{-1}\right) = \sigma\left(1\right) = 1 + \left(\varphi\right) = 1_{\widetilde{L}}$, d.\,h. $\sigma\left(a\right) \neq 0$.\\
 Daher ist $\widetilde{K} := \sigma\left(K\right)$ ein zu $K$ isomorpher Körper.\\
 Sei $Y$ eine neue Unbestimmte.
 Dann ist die Abbildung $\Phi\colon K\left[X\right] \mapsto \widetilde{K}\left[Y\right]$, $\sum\limits_{i = 0}^{\infty}a_iX^i\mapsto \sum\limits_{i = 0}^{\infty}\sigma\left(a_i\right)Y^i$ ein Ringhomomorphismus.
@@ -62,7 +62,7 @@ Dann existiert ein Erweiterungskörper $L \supseteq K$, der Zerfällungskörper von
 Im Fall $n \leq 0$ kann man $L := K$ nehmen.
 Sei also $n > 0$.
 Nach \autoref{satz:12.1} existiert ein Erweiterungskörper $F \supseteq K$, in dem $\varphi$ eine Nullstelle $b$ hat;
-o.B.d.A. $F = K\left(b\right)$.
+\OE{} $F = K\left(b\right)$.
 Schreibe $\varphi = \left(X - b\right)\psi$ mit $\psi \in F\left[X\right]$.
 Wegen $\deg{\psi} = n-1$ existiert nach Induktion ein Erweiterungskörper $L \supseteq F$, der Zerfällungskörper von $\psi$ über $F$ ist.
 Dann ist $L$ auch Zerfällungskörper von $\varphi$ über $K$.
@@ -166,26 +166,26 @@ Nach dem Zwischenwertsatz der Analysis hat $\varphi$ eine reelle Nullstelle.\\
 Sei also $k > 0$.
 Nach \autoref{satz:12.2} exisitiert ein Erweiterungskörper $L \supseteq \C$, der Zerfällungskörper von $\varphi$ über $\C$ ist.
 Dann ist $L$ Zerfällungskörper von $\left(X^2 + 1\right)\varphi$ über $\R$.
-Wegen $\chr{\R} = 0$ ist $\left(X^2 + 1\right)\varphi$ seperabel über $\R$, d.h. die Primfaktoren von $\left(X^2 + 1\right)\varphi$ haben in $L$ keine Mehrfachen Nullstellen.
+Wegen $\chr{\R} = 0$ ist $\left(X^2 + 1\right)\varphi$ seperabel über $\R$, d.\,h. die Primfaktoren von $\left(X^2 + 1\right)\varphi$ haben in $L$ keine Mehrfachen Nullstellen.
 Nach \autoref{satz:11.8} ist $L\mid \R$ eine Galoiserweiterung.\\
 Für $\sigma \in G := \Gal{L\mid\R}$ ist $\widetilde{\sigma}\colon L\left[X\right] \mapsto L\left[X\right]$, $\sum\limits_{i = 0}^{\infty}\sigma\left(a_i\right)X^i \mapsto \sum\limits_{i = 0}^{\infty}\sigma\left(a_i\right)X^i$ ein Ringautomorphismus.\\
 Schreibe $\varphi = a\left(X - b_i\right) - \left(X - b_n\right)$ $\left(a \in \R, b_1, \ldots, b_n \in L\right)$.\\
 Betrachte für jedes $c \in \R$ des Polynomes $\psi_c := \prod\limits_{i < j}\left(X - b_i - b_j - cb_ib_j\right) \in L\left[X\right]$.\\
 Für $\sigma \in G$ ist $\widetilde{\sigma}\left(\varphi\right) = \varphi$ wegen $\varphi \in \R\left[X\right]$.
-Daher permutiert $\widetilde{\varphi}$ die Faktoren $X-b_1, \ldots, X-b_n$ von $\varphi$, d.h. $\sigma$ permutiert $b_1, \ldots, b_n$.
+Daher permutiert $\widetilde{\varphi}$ die Faktoren $X-b_1, \ldots, X-b_n$ von $\varphi$, d.\,h. $\sigma$ permutiert $b_1, \ldots, b_n$.
 Daher permutiert $\widetilde{\sigma}$ die Faktoren $X-b_i-b_j-cb_ib_j$ von $\psi_c$.
-Also: $\widetilde{\sigma}\left(\psi_c\right) = \psi_c$, d.h. die Koeffizienten von $\psi_c$ liegen in $\Fix{\left(G\right)} = \R$.
+Also: $\widetilde{\sigma}\left(\psi_c\right) = \psi_c$, d.\,h. die Koeffizienten von $\psi_c$ liegen in $\Fix{\left(G\right)} = \R$.
 Floglich: $\psi_c \in \R\left[X\right]$, $\deg\psi_c = \begin{pmatrix}n\\2\end{pmatrix} = \frac{n}{2}\left(n-1\right)$;
 dabei ist $n-1$ ungerade.\\
 Nach Induktion liegt eine Nullstelle $b_i + b_j + cb_ib_j$ in $\C$.
 
 Jetz variieren wir $c$:\\
-Wegen $\abs{\R} = \infty$ existieren verschiedene $c, c' \in \R$ und verschiedene $i, j \in \left\{1, \ldots, n\right\}$ mit $b_i+b_j+cb_ib_j, b_i+b_j+c'b_ib_j \in \C$ (Schubfachprinzip), o.B.d.A. $i = 1, j = 2$.
+Wegen $\abs{\R} = \infty$ existieren verschiedene $c, c' \in \R$ und verschiedene $i, j \in \left\{1, \ldots, n\right\}$ mit $b_i+b_j+cb_ib_j, b_i+b_j+c'b_ib_j \in \C$ (Schubfachprinzip), \OE{} $i = 1, j = 2$.
 Subtraktion ergibt: $\left(c-c'\right)b_1b_2 \in \C$, also auch $b_1b_2 \in \C$ und $b_1+b_2 \in \C$.
 Daher sind $b_1, b_2 \in L$ Nullstellen von $\left(X-b_1\right)\left(X-b_2\right) = X^2-\left(b_1+b_2\right)X+b_1b_2\in\C\left[X\right]$.\\
 Daher genügt zu zeigen, dass jedes quadratische Polynom in $\C\left[X\right]$ in Linearfaktoren zerfällt.
 Dazu genügt zu zeigen, dass jedes $z \in \C$ eine Quadratwurzel in $\C$ hat (Quadratische Ergänzung).\\
-Sei also $x:=\Re{\left(z\right)}, y:= \Im{\left(z\right)}$, o.B.d.A. $y \geq 0$.
+Sei also $x:=\Re{\left(z\right)}, y:= \Im{\left(z\right)}$, \OE{} $y \geq 0$.
 Setze $a := \sqrt{\underbrace{\frac{x}{2}+\frac{1}{2}\sqrt{x^2+y^2}}_{\geq 0 \Rightarrow \text{ reelle Wurzel}}}$, $b := \sqrt{\underbrace{-\frac{x}{2}+\frac{1}{2}\sqrt{x^2+y^2}}_{\geq 0 \Rightarrow \text{ reelle Wurzel}}}$.\\
 Dann: $\left(a + bi\right)^2 = x+yi = z$ und wir sind fertig.
 \end{beweis}
@@ -203,7 +203,7 @@ $\C$ ist algebraisch abgeschlossen.
 \begin{beweis}
 Sei $\varphi \in \C\left[X\right]\backslash \C$, also $\varphi\overline{\varphi} \in \R\left[X\right]\backslash \R$.\\
 Nach \autoref{satz:12.4} hat $\varphi\overline{\varphi}$ eine Nullstelle $z \in \C$.
-Also: $\varphi\left(z\right) = 0$ oder $\overline{\varphi}\left(z\right) = 0$ (d.h. $\varphi\left(\overline{z}\right) = 0$).
+Also: $\varphi\left(z\right) = 0$ oder $\overline{\varphi}\left(z\right) = 0$ (d.\,h. $\varphi\left(\overline{z}\right) = 0$).
 \end{beweis}
 
 %%%%%%%%%%%%%%%%%%%
@@ -211,7 +211,7 @@ Also: $\varphi\left(z\right) = 0$ oder $\overline{\varphi}\left(z\right) = 0$ (d
 %%%%%%%%%%%%%%%%%%%
 \begin{bem}\label{bem:12.3}
 \begin{enumerate}[(i)]
-	\item Folglich ist jedes irreduzible Polynom in $\C\left[X\right]$ linear, d.h. von der Form $X-b$ mit $b \in \C$.
+	\item Folglich ist jedes irreduzible Polynom in $\C\left[X\right]$ linear, d.\,h. von der Form $X-b$ mit $b \in \C$.
 	
 	\item Für jedes irreduzible Polynom $\varphi \in \R\left[X\right]$ ist $\deg\varphi \leq 2$;
 	denn $\varphi$ hat eine Nullstelle $b \in \C$. Folglich: $\deg\varphi = \left[\R\left(b\right):\R\right] \leq \left[\C :\R\right] = 2$.
