--- a/kuelshammer-algebra1/Kapitel2.tex
+++ b/kuelshammer-algebra1/Kapitel2.tex
@@ -16,7 +16,7 @@ Wichtige Beispiele sind die Kongruenz von Dreiecken oder die Ähnlichkeit von Mat
   \item $[x]_R = [y]_R$
   \item $[x]_R \cap [y]_R \neq \varnothing$
 \end{enumerate}
-Daher ist $M/R$ eine Partition von $M$, d.h. eine Menge nichtleerer, paarweise disjunkter Teilmengen von $M$ mit Vereinigung $M$.\\
+Daher ist $M/R$ eine Partition von $M$, d.\,h. eine Menge nichtleerer, paarweise disjunkter Teilmengen von $M$ mit Vereinigung $M$.\\
 Bekanntlich erhält man umgekehrt zu jeder Partition $\mathcal{P}$ einer Menge $M$ eine Äquivalenzrelation $(M, M, R)$, wenn man definiert: \[xRy \colon \Leftrightarrow \exists \ P \in \mathcal{P} \colon x, y \in P.\] Ferner ist dann $M/R = \mathcal{P}$.\\
 Daher sind Äquivalenzrelationen auf einer Menge $M$ und Partitionen von $M$ verschiedene Sichtweisen des gleichen mathematischen Sachverhaltes.
 \end{bem}
@@ -32,7 +32,7 @@ Seien $a, b \in \Z, m \in \N$ mit $m\mid a - b$. Dann nennt man $a$ kongruent zu
 % Satz 2.1
 %%%%%%%%%%%%%%%%%%%
 \begin{satz}\label{satz:2.1}
-Die Kongruenz modulo $m$ ist eine Äquivalenzrelation auf $\Z$. Ferner ist sie mit Addition und Multiplikation \emph{verträglich}, d.h. es gilt: \[a \equiv a'\pmod m \wedge b \equiv b'\pmod m \Rightarrow a \mystackrel{+}{\cdot} b \equiv a' \mystackrel{+}{\cdot}b'\pmod m.\]
+Die Kongruenz modulo $m$ ist eine Äquivalenzrelation auf $\Z$. Ferner ist sie mit Addition und Multiplikation \emph{verträglich}, d.\,h. es gilt: \[a \equiv a'\pmod m \wedge b \equiv b'\pmod m \Rightarrow a \mystackrel{+}{\cdot} b \equiv a' \mystackrel{+}{\cdot}b'\pmod m.\]
 \end{satz}
 
 %%%%%%%%%%%%%%%%%%%
@@ -42,7 +42,7 @@ Die Kongruenz modulo $m$ ist eine Äquivalenzrelation auf $\Z$. Ferner ist sie mi
 \emph{Reflexivität:} $a \in \Z \Rightarrow m\mid 0 = a - a \Rightarrow a \equiv a\pmod m$\\
 \emph{Symmetrie:} $a \equiv b\pmod m \Rightarrow m\mid a - b \Rightarrow m\mid -(a - b) = b - a \Rightarrow b \equiv a\pmod b$\\
 \emph{Transivität:} $a \equiv b\pmod m \wedge b \equiv c\pmod m \Rightarrow m\mid a - b \wedge m\mid b - c \Rightarrow m\mid (a - b) + (b - c) = a - c \Rightarrow a \equiv c\pmod m$\\
-\emph{Verträglichkeit:} Sei $a \equiv a'\pmod m$ und $b \equiv b'\pmod m$, d.h. $m\mid a - a'$ und $m\mid b - b'$. Dann ist $m\mid (a - a') + (b - b') = (a + b) - (a' + b')$, d.h. $a + b \equiv a' + b'\pmod m$. Außerdem ist $m\mid (a - a')b + a'(b - b') = ab - a'b'$, d.h. $ab \equiv a'b'\pmod m$.
+\emph{Verträglichkeit:} Sei $a \equiv a'\pmod m$ und $b \equiv b'\pmod m$, d.\,h. $m\mid a - a'$ und $m\mid b - b'$. Dann ist $m\mid (a - a') + (b - b') = (a + b) - (a' + b')$, d.\,h. $a + b \equiv a' + b'\pmod m$. Außerdem ist $m\mid (a - a')b + a'(b - b') = ab - a'b'$, d.\,h. $ab \equiv a'b'\pmod m$.
 \end{beweis}
 
 %%%%%%%%%%%%%%%%%%%
@@ -51,10 +51,10 @@ Die Kongruenz modulo $m$ ist eine Äquivalenzrelation auf $\Z$. Ferner ist sie mi
 \begin{bem}
 Für $a \in \Z$ und $m \in \N$ heißt 
 \[a + m\Z = \left\{a + mz\colon z \in \Z\right\} = \left\{\ldots, a - 2m, a - m, a, a + m, a + 2m, \ldots\right\}\] 
-die Restklassen von $a$ modulo $m$. $\left( \text{z.B.: ist } 2 + 6\Z = \left\{\ldots, -10, -4, 2, 8, 14, \ldots\right\}\right)$ Die Bezeichnung "`\highl{Restklasse}"' erklärt sich folgendermaßen: Division mit Rest liefert $q, r \in \Z$ mit $a = qm + r$ und $0 \leq r < m$. Wegen $m\mid qm = a - r$ ist dann $a \equiv r\pmod m$, d.h. $a + m\Z = r + m\Z$.\\ 
+die Restklassen von $a$ modulo $m$. $\left( \text{z.\,B.: ist } 2 + 6\Z = \left\{\ldots, -10, -4, 2, 8, 14, \ldots\right\}\right)$ Die Bezeichnung "`\highl{Restklasse}"' erklärt sich folgendermaßen: Division mit Rest liefert $q, r \in \Z$ mit $a = qm + r$ und $0 \leq r < m$. Wegen $m\mid qm = a - r$ ist dann $a \equiv r\pmod m$, d.\,h. $a + m\Z = r + m\Z$.\\ 
 (offenbar ist $a + m\Z$ die Äquivalenzklasse von $a$ bezüglich der Kongruenz modulo $m$)\\
 Die Menge aller Restklassen ist also \[\left\{a + m\Z \colon a \in \Z\right\} = \left\{0 + m\Z, 1 + m\Z, \ldots, (m - 1) + m\Z\right\} =: \ZmZ{m}\]
-Sind $r, s \in \left\{0, \ldots, m - 1\right\}$ mit $r \equiv s\pmod m$, so ist $m\mid r - s$ und $\left|r - s\right| < m$, also $r - s = 0$, d.h. $r = s$.\\
+Sind $r, s \in \left\{0, \ldots, m - 1\right\}$ mit $r \equiv s\pmod m$, so ist $m\mid r - s$ und $\left|r - s\right| < m$, also $r - s = 0$, d.\,h. $r = s$.\\
 Also: $\left|\ZmZ{m}\right| = m$.
 \end{bem}
 
@@ -74,11 +74,11 @@ Für $a, b, c \in \Z$ und $m \in \N$ gilt:\\
 %%%%%%%%%%%%%%%%%%%
 \begin{beweis}
 \begin{enumerate}[(i)]
-  \item Sei $\ggT(a, m) = 1$. Dann existieren $x, y \in \Z$ mit $xa + ym = 1$, d.h. $xab + ymb = b$. Aus $m\mid ab$ folgt $m\mid b$.
+  \item Sei $\ggT(a, m) = 1$. Dann existieren $x, y \in \Z$ mit $xa + ym = 1$, d.\,h. $xab + ymb = b$. Aus $m\mid ab$ folgt $m\mid b$.
   \item \begin{itemize}
-  	\item["`$\Rightarrow$"'] Sei $ab \equiv ac\pmod m$, d.h. $m\mid ab - ac$, etwa $a(b - c) = mz$ für ein $z \in \Z$. Dann $\frac{a}{d}\left(b - c\right) = \frac{m}{d}z$ mit $d := \ggT(a, m)$. Wegen $\ggT\left(\frac{a}{d}, \frac{m}{d}\right) = 1$ folgt aus (i): \[\frac{m}{d}\mid b - c \text{, d.h. } b \equiv c\pmod{\frac{m}{d}}\]
-\item["`$\Leftarrow$"'] Sei $b \equiv c\pmod{\frac{m}{d}}$, d.h. $b - c = z\frac{m}{d}$ für ein $z \in \Z$.\\
-Dann: $a(b - c) = zm\frac{a}{d}$, d.h. $ab \equiv ac\pmod m$.
+  	\item["`$\Rightarrow$"'] Sei $ab \equiv ac\pmod m$, d.\,h. $m\mid ab - ac$, etwa $a(b - c) = mz$ für ein $z \in \Z$. Dann $\frac{a}{d}\left(b - c\right) = \frac{m}{d}z$ mit $d := \ggT(a, m)$. Wegen $\ggT\left(\frac{a}{d}, \frac{m}{d}\right) = 1$ folgt aus (i): \[\frac{m}{d}\mid b - c \text{, d.\,h. } b \equiv c\pmod{\frac{m}{d}}\]
+\item["`$\Leftarrow$"'] Sei $b \equiv c\pmod{\frac{m}{d}}$, d.\,h. $b - c = z\frac{m}{d}$ für ein $z \in \Z$.\\
+Dann: $a(b - c) = zm\frac{a}{d}$, d.\,h. $ab \equiv ac\pmod m$.
 \end{itemize}
 \end{enumerate}
 \end{beweis}
@@ -210,7 +210,7 @@ Gegebenenfalls bilden die Lösungen eine Restklasse modulo $\kgV(m_1, \ldots, m_k
 	Daraus folgt: $a_i \equiv b \pmod{\kgV(\ggT(m_i, m_1), \ggT(m_i, m_2))} \stackrel{\autoref{satz:2.3}(iii)}{=} \ggT(m_i, \kgV(m_1, m_2)) = \ggT(m_i, e)$.\\
 Nach Induktion existiert ein $x \in \Z$ mit $x \equiv b \pmod{e}$ und $x \equiv a_i \pmod{m_i}$ für $i = 3, \ldots, k$ \footnotesize(Man muss hierfür ($\ast\ast$) für dieses System von Kongruenzen überprüfen)\\ \normalsize
 Für $i = 1,2$ ist $x \stackrel{x \equiv b \pmod{e}}{\equiv} b \equiv a_i \pmod{m_i}$.\\
-\emph{Eindeutigkeit:} Sei $x' \in \Z$ weitere Lösung von ($\ast$). Dann: $x' \equiv a_i \equiv x \pmod{m_i}$ für $i = 1, \ldots, k$, d.h. $x' \equiv x \pmod{\kgV(m_1, \ldots, m_k)}$. Dann ist $x' \equiv x \equiv a_i \pmod{m_i} \ \ (i = 1, \ldots, k)$, d.h. $x'$ ist auch Lösung von ($\ast$).
+\emph{Eindeutigkeit:} Sei $x' \in \Z$ weitere Lösung von ($\ast$). Dann: $x' \equiv a_i \equiv x \pmod{m_i}$ für $i = 1, \ldots, k$, d.\,h. $x' \equiv x \pmod{\kgV(m_1, \ldots, m_k)}$. Dann ist $x' \equiv x \equiv a_i \pmod{m_i} \ \ (i = 1, \ldots, k)$, d.\,h. $x'$ ist auch Lösung von ($\ast$).
 \end{itemize}
 \end{beweis}
 
