--- a/kuelshammer-algebra1/Kapitel6.tex
+++ b/kuelshammer-algebra1/Kapitel6.tex
@@ -8,7 +8,7 @@ $K$ Körper!
 Seien $\alpha, \beta, \varphi \in K[X]$ mit $0 \neq \varphi\mid\alpha - \beta$. Dann nennt man $\alpha$ kongruent zu $\beta \ modulo \ \varphi$ und schreibt $\alpha \equiv \beta \pmod{\varphi}$. Man zeigt leicht, dass dies eine Äquivalenzrelation ist. Die Äquivalenzklasse von $\alpha$ heißt Restklasse $modulo \ \varphi$.\\
 Sie hat die Form $\alpha + \varphi K[X] := \left\{\alpha + \varphi\tau \colon \tau \in K[X]\right\}$.\\
 Man setzt $(\varphi) := \varphi K[X]$.\\
-Divison mit Rest liefert $\kappa, \rho \in K[X]$ mit $\alpha = \kappa\varphi + \rho$ und $\deg\rho < \deg\varphi$. Dann ist $\alpha \equiv \rho \pmod{\varphi}$, d.h. $\alpha + (\varphi) = \rho + (\varphi)$.\\
+Divison mit Rest liefert $\kappa, \rho \in K[X]$ mit $\alpha = \kappa\varphi + \rho$ und $\deg\rho < \deg\varphi$. Dann ist $\alpha \equiv \rho \pmod{\varphi}$, d.\,h. $\alpha + (\varphi) = \rho + (\varphi)$.\\
 Daher enthält jede Restklasse $modulo \ \varphi$ ein Polynom $\rho$ mit $\deg\rho < \deg\varphi$.\\
 Die Menge aller Restklassen $modulo \ \varphi$ ist also 
 \[\begin{array}{lcl}
@@ -16,7 +16,7 @@ K[X] / (\varphi) & := & \left\{\alpha + (\varphi) \colon \alpha \in K[X]\right\}
 & = & \left\{\rho + (\varphi) \colon \rho \in K[X], \deg\rho < n\right\}\\
 & = & \left\{a_0 + a_1X + \ldots + a_{n - 1}X^{n - 1} + (\varphi) \colon a_0, \ldots, a_{n - 1} \in K\right\}
 \end{array}\] 
-mit $n := \deg\varphi$. Seien $\rho, \sigma \in K[X]$ mit $\deg\rho < n, \deg\sigma < n$ und $\rho + (\varphi) = \sigma + (\varphi)$, d.h. $\varphi\mid\rho - \sigma$.\\
+mit $n := \deg\varphi$. Seien $\rho, \sigma \in K[X]$ mit $\deg\rho < n, \deg\sigma < n$ und $\rho + (\varphi) = \sigma + (\varphi)$, d.\,h. $\varphi\mid\rho - \sigma$.\\
 Gradvergleich liefert $\rho = \sigma$. Dies zeigt, dass die Restklassen $\rho + (\varphi)$ mit $\deg\rho < n$ paarweise verschieden sind. Im Fall $\left|K\right| < \infty$ ist $\left|K[X] / (\varphi)\right| = \left|K\right|^{\deg\varphi}$.
 \end{bem}
 
@@ -24,7 +24,7 @@ Gradvergleich liefert $\rho = \sigma$. Dies zeigt, dass die Restklassen $\rho + 
 % Bemerkung 6.2
 %%%%%%%%%%%%%%%%%%%
 \begin{bem}\label{bem:6.2}
-Sei $0 \neq \varphi \in K[X]$. Man zeigt leicht, dass die Kongruenz $modulo \ \varphi$ mit Addition und Multiplikation in $K[X]$ verträglich ist, d.h. für $\alpha_1, \alpha_2, \beta_1, \beta_2 \in K[X]$ gilt: \[\alpha_1 \equiv \alpha_2 \pmod{\varphi} \wedge \beta_1 \equiv \beta_2 \pmod{\varphi} \Rightarrow \alpha_1 \mystackrel{+}{\cdot} \beta_1 \equiv \alpha_2 \mystackrel{+}{\cdot} \beta_2 \pmod{\varphi}.\] Dies erlaubt es, auf $K[X] / (\varphi)$ Addition und Multiplikation zu definieren: \[\left[\alpha + (\varphi)\right] \mystackrel{+}{\cdot} \left[\beta + (\varphi)\right] := \alpha \mystackrel{+}{\cdot} \beta + (\varphi) \ \ \ \left(\alpha, \beta \in K[X]\right)\] Man rechnet nach, dass $K[X] / (\varphi)$ mit diesen Verknüpfungen zu einem kommutativen Ring wird, dieser heißt \highl{Restklassenring $modulo \ \varphi$}.\\
+Sei $0 \neq \varphi \in K[X]$. Man zeigt leicht, dass die Kongruenz $modulo \ \varphi$ mit Addition und Multiplikation in $K[X]$ verträglich ist, d.\,h. für $\alpha_1, \alpha_2, \beta_1, \beta_2 \in K[X]$ gilt: \[\alpha_1 \equiv \alpha_2 \pmod{\varphi} \wedge \beta_1 \equiv \beta_2 \pmod{\varphi} \Rightarrow \alpha_1 \mystackrel{+}{\cdot} \beta_1 \equiv \alpha_2 \mystackrel{+}{\cdot} \beta_2 \pmod{\varphi}.\] Dies erlaubt es, auf $K[X] / (\varphi)$ Addition und Multiplikation zu definieren: \[\left[\alpha + (\varphi)\right] \mystackrel{+}{\cdot} \left[\beta + (\varphi)\right] := \alpha \mystackrel{+}{\cdot} \beta + (\varphi) \ \ \ \left(\alpha, \beta \in K[X]\right)\] Man rechnet nach, dass $K[X] / (\varphi)$ mit diesen Verknüpfungen zu einem kommutativen Ring wird, dieser heißt \highl{Restklassenring $modulo \ \varphi$}.\\
 Nullelement ist $0 + (\varphi)$, Einselement $1 + (\varphi)$.\\
 Außerdem kann man Elemente in $K[X] / (\varphi)$ mit Elementen aus $K$ multiplizieren: \[a\left(\beta + (\varphi)\right) := a\beta + (\varphi) \ \ \ \left(a \in K, \beta \in K[X]\right).\] So wird $K[X] / (\varphi)$ zu einem $K$-Vektorraum. \autoref{bem:6.1} zeigt, dass die Elemente $1 + (\varphi), X + (\varphi), X^2 + (\varphi), \ldots, X^{n - 1} + (\varphi) \ \ (n := \deg\varphi)$ eine $K$-Basis von $K[X] / (\varphi)$ bilden. Insbesondere ist $\dim_K K[X] / (\varphi) = \deg\varphi$.
 \end{bem}
@@ -52,7 +52,7 @@ Analog zu $\ZmZ{m}$.
 % Bemerkung 6.3
 %%%%%%%%%%%%%%%%%%%
 \begin{bem}\label{bem:6.3}
-Für $0 \neq \varphi \in K[X]$ gilt nach \autoref{satz:6.1}: \[U\left(K[X] / (\varphi)\right) = \left\{\alpha + (\varphi) \colon \alpha \in K[X], \ggT(\alpha, \varphi) = 1\right\}.\] Der erweiterte euklidische Algorithmus liefert zu $\alpha \in K[X]$ mit $\ggT(\alpha, \varphi) = 1$, Polynome $\beta, \gamma \in K[X]$ mit $\alpha\beta + \varphi\gamma = 1$. Dann: $\alpha\beta \equiv 1 \pmod{\varphi}$, d.h. $\left[\alpha + (\varphi)\right]\left[\beta + (\varphi)\right] = 1 + (\varphi).$ Also ist $\left[\alpha + (\varphi)\right]^{-1} = \beta + (\varphi)$.
+Für $0 \neq \varphi \in K[X]$ gilt nach \autoref{satz:6.1}: \[U\left(K[X] / (\varphi)\right) = \left\{\alpha + (\varphi) \colon \alpha \in K[X], \ggT(\alpha, \varphi) = 1\right\}.\] Der erweiterte euklidische Algorithmus liefert zu $\alpha \in K[X]$ mit $\ggT(\alpha, \varphi) = 1$, Polynome $\beta, \gamma \in K[X]$ mit $\alpha\beta + \varphi\gamma = 1$. Dann: $\alpha\beta \equiv 1 \pmod{\varphi}$, d.\,h. $\left[\alpha + (\varphi)\right]\left[\beta + (\varphi)\right] = 1 + (\varphi).$ Also ist $\left[\alpha + (\varphi)\right]^{-1} = \beta + (\varphi)$.
 \end{bem}
 
 %%%%%%%%%%%%%%%%%%%
@@ -79,7 +79,7 @@ Folglich: $\alpha + (\varphi) \in U\left(K[X]/(\varphi)\right)$. Also $K[X] / (\
 % Beispiel 6.1
 %%%%%%%%%%%%%%%%%%%
 \begin{bsp}\label{bsp:6.1}
-Sei $p \in \PZ$ und $n \in \N$. Um einen Körper mit $p^n$ Elementen zu konstruieren, genügt es also, ein irreduzibles Polynom vom Grad $n$ in $\F_p[X]$ zu finden. Wir werden später sehen, dass dies für alle $p$, $n$ geht. Im Fall $p = 2$, $n = 3$ ist z.B. $\varphi = X^3 + X + 1$ irreduzibel in $\F_2[X]$; denn sonst wäre $\varphi = \left(X - a\right)\left(X^2 + bX + c\right)$ mit $a, b, c \in \F_2$, also $\varphi(a) = 0$. Aber: $\varphi(0) = 1 = \varphi(1)$.\\
+Sei $p \in \PZ$ und $n \in \N$. Um einen Körper mit $p^n$ Elementen zu konstruieren, genügt es also, ein irreduzibles Polynom vom Grad $n$ in $\F_p[X]$ zu finden. Wir werden später sehen, dass dies für alle $p$, $n$ geht. Im Fall $p = 2$, $n = 3$ ist z.\,B. $\varphi = X^3 + X + 1$ irreduzibel in $\F_2[X]$; denn sonst wäre $\varphi = \left(X - a\right)\left(X^2 + bX + c\right)$ mit $a, b, c \in \F_2$, also $\varphi(a) = 0$. Aber: $\varphi(0) = 1 = \varphi(1)$.\\
 Daher ist $\F_2[X] / \left(X^3 + X + 1\right)$ Körper mit $2^3 = 8$ Elementen. (ÜA: Addition- und Multiplikationstabelle aufstellen!)
 \end{bsp}
 
@@ -158,7 +158,7 @@ Seien $K, L$ Körper. Eine Abbildung $f \colon K \mapsto L$ mit $f(a \mystackrel{
 	\item Für Körper $K, L, M$ und Homomorphismus $f \colon K \mapsto L, g \colon L \mapsto M$ ist auch $g \circ f \colon K \mapsto M$ ein Homomorphismus.
 	\item Ist $f \colon K \mapsto L$ ein Isomorphismus, so auch $f^{-1} \colon L \mapsto K$.
 	\item Für jeden Homomorphismus $f \colon K \mapsto L$ und $x \in K$ gilt: $f(x) = 0 \Leftrightarrow x = 0$, denn aus $f(0) = f(0 + 0) = f(0) + f(0)$ folgt $f(0) = 0$. Ist andererseits $0 \neq c \in K$, so ist $1 = f(1) = f(xx^{-1}) = f(x)f(x^{-1})$, also $f(x) \neq 0$.
-	\item Jeder Homomorphismus von Körpern $f \colon K \mapsto L$ ist injektiv, denn sind $a, b \in K$ mit $f(a) = f(b)$, so ist $0 = f(b) - f(a) = f(b - a)$, d.h. $b - a = 0$ nach (iii). Also: $b = a$
+	\item Jeder Homomorphismus von Körpern $f \colon K \mapsto L$ ist injektiv, denn sind $a, b \in K$ mit $f(a) = f(b)$, so ist $0 = f(b) - f(a) = f(b - a)$, d.\,h. $b - a = 0$ nach (iii). Also: $b = a$
 	\item Die komplexe Konjugation $\C \mapsto \C, z \mapsto \overline{z}$, ist ein Automorphismus.
 	\item Man nennt Körper $K, L$ isomorph und schreibt $K \cong L$, falls ein Isomorphismus $f \colon K \mapsto L$ existiert. Wie üblich zeigt man: $\cong$ ist Äquivalenzrelation
 	\item Für jeden Homomorphismus von Körpern $f \colon K \mapsto L$ ist $Bld(f) = f(K)$ ein zu $K$ isomorpher Teilkörper von $L$.
@@ -182,8 +182,8 @@ Daher ist die folgende Abbildung ein Isomorphismus von Körpern: \[f \colon \C \m
 % Bemerkung
 %%%%%%%%%%%%%%%%%%%
 \begin{bem}\label{bem:6.7}
-Die \highl{Charakteristik} $p = char(K)$ von $K$ ist definiert durch \[p := \min{\left\{n \in \N \colon \underbrace{1 + 1 + 1 + \ldots + 1}_{Summanden} = 0\right\}},\] falls das Minimum existiert. Anderenfalls sagt man, dass $K$ die Charakteristik $0$ hat, und schreibt: $char(K) = 0$ z.B. ist $char(\Q) = char(\R) = char(\C) = 0$, und $char(\F_p) = p$ für $p \in \PZ$.\\
-Für jeden Körper mit $char(K) \neq 0$ ist $p := char(K) \in \PZ$, denn aus $p = ab$ mit $a, b \in \N$ folgt: \[0 = \underbrace{1 + \ldots + 1}_{p Summanden} = \underbrace{\left(1 + \ldots + 1\right)}_{a}\underbrace{\left(1 + \ldots + 1\right)}_{b},\] d.h. $\underbrace{1 + \ldots + 1}_{a} = 0$ oder $\underbrace{1 + \ldots + 1}_{b} = 0$
+Die \highl{Charakteristik} $p = char(K)$ von $K$ ist definiert durch \[p := \min{\left\{n \in \N \colon \underbrace{1 + 1 + 1 + \ldots + 1}_{Summanden} = 0\right\}},\] falls das Minimum existiert. Anderenfalls sagt man, dass $K$ die Charakteristik $0$ hat, und schreibt: $char(K) = 0$ z.\,B. ist $char(\Q) = char(\R) = char(\C) = 0$, und $char(\F_p) = p$ für $p \in \PZ$.\\
+Für jeden Körper mit $char(K) \neq 0$ ist $p := char(K) \in \PZ$, denn aus $p = ab$ mit $a, b \in \N$ folgt: \[0 = \underbrace{1 + \ldots + 1}_{p Summanden} = \underbrace{\left(1 + \ldots + 1\right)}_{a}\underbrace{\left(1 + \ldots + 1\right)}_{b},\] d.\,h. $\underbrace{1 + \ldots + 1}_{a} = 0$ oder $\underbrace{1 + \ldots + 1}_{b} = 0$
 \end{bem}
 
 %%%%%%%%%%%%%%%%%%%
@@ -204,8 +204,8 @@ Für den Primkörper $P$ von $K$ gilt: \randbem{Körper mit Charakteristik $0$ ist 
 \begin{enumerate}[(i)]
 	\item Für $n \in \N$ sei $n1_K := \underbrace{1 + \ldots + 1}_{n \text{ Summanden}}$.\\
 	Wegen $char(K) = 0$ ist $n1_K \neq 0$ für alle $n \in \N$. Wir setzen $0 \cdot 1_K := 0$ und $(-n)1_K := -(n1_K).$ Dann gilt für $m, n \in \Z \colon \left(m \mystackrel{\pm}{\cdot} n\right)1_K = \left(m1_K\right) \mystackrel{\pm}{\cdot} \left(n1_K\right)$.\\
-	Wir definieren eine Abbildung $f \colon \Q \mapsto K$ durch $f(\frac{m}{n}) := \frac{m1_K}{n1_K} \ \left(m, n \in \Z, n \neq 0\right)$. Dann ist $f$ wohldefiniert, aus $\frac{m}{n} = \frac{m'}{n'}$ folgt nämlich $mn' = m'n$, d.h. $\underbrace{\left(mn'\right)1_K}_{\left(m1_K\right)\left(n'1_K\right)} = \underbrace{\left(m'n\right)1_K}_{\left(m'1_K\right)\left(n1_K\right)}$ und damit $\frac{m1_K}{n1_K} = \frac{m'1_K}{n'1_K}$\\
-	Man rechnet leicht nach, dass $f$ ein Homomorphismus ist. Daher ist $Bld(f)$ ein zu $\Q$ isomorpher Teilkörper von $K$. Nach Definition von $P$ ist $P \subseteq Bld(f)$. Anderenseits ist $1_K \in P$, $1_K + 1_K \in P, \ldots$. Daher: $n1_K \in P$ für $n \in \N$. Also $\frac{m1_K}{n1_K} \in P$ für alle $m, n \in \Z$ mit $n \neq 0$. Daher: $Bld(f) \subseteq P$, d.h. $P = Bld(f) \cong \Q$
+	Wir definieren eine Abbildung $f \colon \Q \mapsto K$ durch $f(\frac{m}{n}) := \frac{m1_K}{n1_K} \ \left(m, n \in \Z, n \neq 0\right)$. Dann ist $f$ wohldefiniert, aus $\frac{m}{n} = \frac{m'}{n'}$ folgt nämlich $mn' = m'n$, d.\,h. $\underbrace{\left(mn'\right)1_K}_{\left(m1_K\right)\left(n'1_K\right)} = \underbrace{\left(m'n\right)1_K}_{\left(m'1_K\right)\left(n1_K\right)}$ und damit $\frac{m1_K}{n1_K} = \frac{m'1_K}{n'1_K}$\\
+	Man rechnet leicht nach, dass $f$ ein Homomorphismus ist. Daher ist $Bld(f)$ ein zu $\Q$ isomorpher Teilkörper von $K$. Nach Definition von $P$ ist $P \subseteq Bld(f)$. Anderenseits ist $1_K \in P$, $1_K + 1_K \in P, \ldots$. Daher: $n1_K \in P$ für $n \in \N$. Also $\frac{m1_K}{n1_K} \in P$ für alle $m, n \in \Z$ mit $n \neq 0$. Daher: $Bld(f) \subseteq P$, d.\,h. $P = Bld(f) \cong \Q$
 	\item Sei $char(K) = p > 0$, also $p \in \PZ$. Wir definieren $n1_K$ für $n \in \Z$ wie in (i). Nach Voraussetzung ist $p1_K = 0$. Wir definieren eine Abbildung $f \colon \ZmZ{p} \mapsto K$ durch $f(a + p\Z) := a1_K \ (a \in \Z)$. Das ist wohldefiniert, ist nämlich $a' \in \Z$ mit $a + p\Z = a' + p\Z$, so existiert ein $z \in \Z$ mit $a' = a +pz$.\\
 	Folglich: $a'1_K = a1_K + \underbrace{\left(p1_K\right)}_{= 0}\left(z1_K\right) = a1_K$. Man rechnet leicht nach, dass $f$ ein Homomorphismus ist. Wie in (i) folgt: \[\ZmZ{p} \cong Bld(f) = P.\]
 \end{enumerate}.
@@ -287,7 +287,7 @@ Sei $char(K) = p > 0$. Dann ist die Abbildung $f \colon K \mapsto K,\ x \mapsto 
 % Beweis
 %%%%%%%%%%%%%%%%%%%
 \begin{beweis}
-Offenbar ist $f(1) = 1$, und für $x, y \in K$ ist $f(xy) = \left(xy\right)^p = x^py^p = f(x)f(y)$, und $f(x + y) = (x + y)^p = x^p + \binom{p}{1}x^{p-1}y + \ldots + \binom{p}{p-1}xy^{p-1} + y^p$. Für $i = 1, \ldots, p-1$ ist $\binom{p}{i} \in \Z$ und $\binom{p}{i} = \frac{p!}{i!\left(p - i\right)!}$, d.h. $p\mid \binom{p}{i}$.\\
+Offenbar ist $f(1) = 1$, und für $x, y \in K$ ist $f(xy) = \left(xy\right)^p = x^py^p = f(x)f(y)$, und $f(x + y) = (x + y)^p = x^p + \binom{p}{1}x^{p-1}y + \ldots + \binom{p}{p-1}xy^{p-1} + y^p$. Für $i = 1, \ldots, p-1$ ist $\binom{p}{i} \in \Z$ und $\binom{p}{i} = \frac{p!}{i!\left(p - i\right)!}$, d.\,h. $p\mid \binom{p}{i}$.\\
 Daher: $\binom{p}{i}1_K = \underbrace{1 + \ldots + 1}_{p_i \text{ Summanden}} = 0$ und $\binom{p}{i}x^{p-1}y^i = 0$.\\
 Folglich: $(x + y)^p = x^p + y^p = f(x) + f(y)$.
 \end{beweis}
@@ -324,8 +324,8 @@ Ein Körper $K$ mit $2^{12}$ Elementen hat also Teilkörper mit $2,\ 2^2,\ 2^3,\ 2
 \begin{enumerate}[(i)]
 	\item Sei $F \subseteq E$ Teilkörper. Dann: $p = char(E) = char(F)$, also $\left|F\right| = p^f$ für ein $f \in \N$. Sei $n := \left[E:F\right]$.\\
 	Dann: $E \cong F^n$ als $F$-Vektorraum.\\
-	Insbesondere $p^e = \left|E\right| = \left|F\right|^n = p^{f^n}$, d.h. $f\mid e$.
-	\item Sei $f \in \N$ mit $f\mid e$. Nach ÜA 5 ist dann: $p^f-1\mid p^e-1$. Nach \autoref{bsp:6.5} existiert ein $a \in E$ mit $a^{p^e-1} = 1$ und $E = \left\{0, 1, a, a^2, \ldots, a^{p^e-2}\right\}$. Die Elemente \[b_i := a^{i\left(p^e-1\right)/\left(p^f-1\right)} \ \left(i = 0, 1, \ldots, p^f-2\right)\] sind paarweise verschieden mit $b_i^{p^f-1} = 1$, d.h. $b_i^{p^f} = b_i$. Daher sind $0, b_0, b_1, \ldots, b_{p^f-2}$ genau die Nullstellen von $x^{p^f} - x$ in $E$. Folglich enthält $F := \left\{b \in E \colon b^{p^f} = b\right\}$ genau $p^f$ Elemente. Diese bilden einen Teilkörper von $E$: denn $0, 1 \in F$, und für $b, c \in F$ gilt: $\left(b \mystackrel{\pm}{\cdot} c\right)^{p^f} \overbrace{=}^{\autoref{satz:6.7}} b^{p^f} \pm c^{p^f} = b \mystackrel{\pm}{\cdot} c$, d.h. $b \mystackrel{\pm}{\cdot} c \in F$. Analog $\frac{b}{c} \in F$ für $c \neq 0$.\\
-	\textsc{Eindeutigkeit:} Ist $F' \subseteq E$ ein weiterer Teilkörper mit $\left|F'\right| = p^f$, so ist $b^{p^f} = b$ für alle $b \in F'$. Nach \autoref{bsp:6.5}. Daher: $F' \subseteq F$, d.h. $F' = F$.
+	Insbesondere $p^e = \left|E\right| = \left|F\right|^n = p^{f^n}$, d.\,h. $f\mid e$.
+	\item Sei $f \in \N$ mit $f\mid e$. Nach ÜA 5 ist dann: $p^f-1\mid p^e-1$. Nach \autoref{bsp:6.5} existiert ein $a \in E$ mit $a^{p^e-1} = 1$ und $E = \left\{0, 1, a, a^2, \ldots, a^{p^e-2}\right\}$. Die Elemente \[b_i := a^{i\left(p^e-1\right)/\left(p^f-1\right)} \ \left(i = 0, 1, \ldots, p^f-2\right)\] sind paarweise verschieden mit $b_i^{p^f-1} = 1$, d.\,h. $b_i^{p^f} = b_i$. Daher sind $0, b_0, b_1, \ldots, b_{p^f-2}$ genau die Nullstellen von $x^{p^f} - x$ in $E$. Folglich enthält $F := \left\{b \in E \colon b^{p^f} = b\right\}$ genau $p^f$ Elemente. Diese bilden einen Teilkörper von $E$: denn $0, 1 \in F$, und für $b, c \in F$ gilt: $\left(b \mystackrel{\pm}{\cdot} c\right)^{p^f} \overbrace{=}^{\autoref{satz:6.7}} b^{p^f} \pm c^{p^f} = b \mystackrel{\pm}{\cdot} c$, d.\,h. $b \mystackrel{\pm}{\cdot} c \in F$. Analog $\frac{b}{c} \in F$ für $c \neq 0$.\\
+	\textsc{Eindeutigkeit:} Ist $F' \subseteq E$ ein weiterer Teilkörper mit $\left|F'\right| = p^f$, so ist $b^{p^f} = b$ für alle $b \in F'$. Nach \autoref{bsp:6.5}. Daher: $F' \subseteq F$, d.\,h. $F' = F$.
 \end{enumerate}.
 \end{beweis}
