--- a/kuelshammer-algebra1/Kapitel7.tex
+++ b/kuelshammer-algebra1/Kapitel7.tex
@@ -24,7 +24,7 @@ Sind alle $b \in L$ algebraisch über $K$, so heißt $L\mid K$ eine \highl{Körpere
 %%%%%%%%%%%%%%%%%%%
 \begin{bem}\label{bem:7.1}
 Sei $b \in L$ algebraisch über $K$.\\
-Wähle Polynom $\mu(b) = 0$, o.B.d.A. $\mu$ normiert. Dann ist $\mu$ eindeutig bestimmt. Ist nämlich $\nu \in K[X] \backslash \left\{0\right\}$ normiert mit $\deg{\nu} = \deg{\mu}$ und $\nu(b) = 0$, so ist $\mu - \nu \in K[X]$ mit $\deg{\mu - \nu} < \deg{\mu}$ und $\left(\mu - \nu\right)(b) = 0$. Also: $\mu - \nu = 0$ nach Wahl von $\mu$. Also: $\mu = \nu$.\\
+Wähle Polynom $\mu(b) = 0$, \OE{} $\mu$ normiert. Dann ist $\mu$ eindeutig bestimmt. Ist nämlich $\nu \in K[X] \backslash \left\{0\right\}$ normiert mit $\deg{\nu} = \deg{\mu}$ und $\nu(b) = 0$, so ist $\mu - \nu \in K[X]$ mit $\deg{\mu - \nu} < \deg{\mu}$ und $\left(\mu - \nu\right)(b) = 0$. Also: $\mu - \nu = 0$ nach Wahl von $\mu$. Also: $\mu = \nu$.\\
 Bezeichnung: $\mu$ \highl{Minimalpolynom} von $b$ über $K$.
 \end{bem}
 
@@ -53,12 +53,12 @@ Schreibe $\delta := \ggT\left(\varphi, \mu\right) = \alpha\varphi + \beta\mu$ mi
 Dann: $\delta(b) = \alpha(b)\underbrace{\varphi(b)}_{= 0} + \beta(b)\underbrace{\mu(b)}_{= 0} = 0$.\\
 Nach Wahl von $\mu$ ist $\deg{(\delta)} = \deg{(\mu)}$.\\
 Da $\delta$, $\mu$ normiert mit $\delta\mid\mu$ sind, folgt $\mu = \delta\mid\varphi$.\\
-\item["`$\Leftarrow$"'] Sei $\mu\mid\varphi$, d.h. $\varphi = \mu\nu \ \left(\nu \in K[X]\right)$.\\
+\item["`$\Leftarrow$"'] Sei $\mu\mid\varphi$, d.\,h. $\varphi = \mu\nu \ \left(\nu \in K[X]\right)$.\\
 Dann: $\varphi(b) = \mu(b) \cdot \nu(b) = 0$.\\
 \end{itemize}
 Seien $\alpha, \beta \in K[X]$ mit $\mu = \alpha\beta$.\\
-Dann: $0 = \mu(b) = \alpha(b) \cdot \beta(b)$, also \randbem{Unterschied zu Matrizen in Körpern: $a \cdot b = 0 \Leftrightarrow a = 0 \vee b = 0$} $\alpha(b) = 0$ oder $\beta(b) = 0$, o.B.d.A. $\alpha(b) = 0$.\\
-Daher: $\mu\mid\alpha \ \mu$, d.h. $\alpha = a\mu$ für ein $a \in K \backslash \left\{0\right\}$.\\
+Dann: $0 = \mu(b) = \alpha(b) \cdot \beta(b)$, also \randbem{Unterschied zu Matrizen in Körpern: $a \cdot b = 0 \Leftrightarrow a = 0 \vee b = 0$} $\alpha(b) = 0$ oder $\beta(b) = 0$, \OE{} $\alpha(b) = 0$.\\
+Daher: $\mu\mid\alpha \ \mu$, d.\,h. $\alpha = a\mu$ für ein $a \in K \backslash \left\{0\right\}$.\\
 Dies zeigt: $\mu$ irreduzibel.
 \end{beweis}
 
@@ -110,7 +110,7 @@ Offenbar ist $f$ auch $K$-linear. Daher: \[\left[K(b):K\right] = \dim_k K(b) = \
 \begin{bsp}\label{bsp:7.3}
 $L\mid K$ Körpererweiterung und $n := \left[L:K\right] < \infty$.\\
 Dann ist $L\mid K$ algebraisch; denn für $b \in L$ können die $n + 1$ Elemente $1, b, b^2, \ldots, b^n$ nicht linear unabhängig sein. Folglich existiert $a_0, a_1, \ldots, a_n \in K$, nicht alle gleich $0$, mit $a_0 + a_1b + \ldots + a_nb^n = 0$.\\
-Also: $\varphi := a_0 + a_1X + \ldots + a_nX^n \in K[X] \backslash \left\{0\right\}$ mit $\varphi(b) = 0$, d.h. $b$ algebraisch über $K$.\\
+Also: $\varphi := a_0 + a_1X + \ldots + a_nX^n \in K[X] \backslash \left\{0\right\}$ mit $\varphi(b) = 0$, d.\,h. $b$ algebraisch über $K$.\\
 Ist also $E$ ein endlicher Körper und $F \subseteq E$ Teilkörper, dann ist $E\mid F$ algebraisch.
 \end{bsp}
 
@@ -140,7 +140,7 @@ $F$ heißt \highl{Algebraischer Abschluss}{algebraischer Abschluss} von $K$ in $L
 \begin{enumerate}[(i)]
 	\item Seien $b_1, \ldots, b_n$ algebraisch über $K$. Nach \autoref{satz:7.2} ist $\left[K(b_1):K\right] < \infty$. Offenbar ist $b_2$ auch algebraisch über $K(b_1)$\footnote{ein etwas größerer Körper als $K$}. Daher ist analog: \[\left[\underbrace{\left(K\left(b_1\right)\right)\left(b_2\right)}_{= K\left(b_1, b_2\right)}:K\left(b_1\right)\right] < \infty\] Gradsatz: $\left[K\left(b_1, b_2\right):K\right] < \infty$. Induktiv folgt: \[\left[K\left(b_1, \ldots, b_n\right):K\right] < \infty.\] Nach \autoref{bsp:7.3} ist $K\left(b_1, \ldots, b_n\right)\mid K$ algebraisch.
 	\item \begin{itemize}
-	\item["`$\Rightarrow$"'] Sei $M\mid K$ algebraisch. Dann ist jedes $b \in M$ algebraisch über $K$,also auch über $L$. Daher ist $M:L$ algebraisch. Ferner ist jedes $b \in L$ algebraisch über $K$ und daher ist auch $L\mid K$ algebraisch.\\
+	\item["`$\Rightarrow$"'] Sei $M\mid K$ algebraisch. Dann ist jedes $b \in M$ algebraisch über $K$,also auch über $L$. Daher ist $M:L$ algebraisch. Ferner ist jedes $b \in L$ algebraisch über $K$ und Daher ist auch $L\mid K$ algebraisch.\\
 	\item["`$\Leftarrow$"'] Seien $M\mid L$, $L\mid K$ algebraisch, und sei $c \in M$.\\
 	Dann exisitiert $b_0, \ldots, b_{n-1} \in L$ mit $c^n + b_{n-1}c^{n-1} + \ldots + b_1c + b_0 = 0$.\\
 	Daher ist $c$ algebraisch über $K\left(b_0, \ldots, b_{n-1}\right)$. Nach \autoref{satz:7.2} ist \[\left[\underbrace{\left(K\left(b_0, \ldots, b_{n-1}\right)\right)\left(c\right)}_{= K\left(b_0, \ldots, b_{n-1}, c\right)}:K\left(b_0, \ldots, b_{n-1}\right)\right] < \infty\]
@@ -163,7 +163,7 @@ Bekanntlich ist $\sqrt{2} \in \R$ algebraisch über $\Q$ mit Minimalpolynom $X^2 
 Daher: $\left[\Q\left(\sqrt{2}\right):\Q\right] = \deg{\left(X^2 - 2\right)} = 2$.\\
 Sogar: $\Q\left(\sqrt{2}\right) = \left(a + b\sqrt{2} \colon a, b \in \Q\right)$. Für $a + b\sqrt{2} \neq 0$ ist  dabei \[\frac{1}{a + b\sqrt{2}} = \frac{a - b\sqrt{2}}{\left(a + b\sqrt{2}\right)\left(a - b\sqrt{2}\right)} = \frac{a}{a^2 - 2b^2} - \frac{b}{a^2 - 2b^2}\sqrt{2} \in \Q\left(\sqrt{2}\right).\]
 Es ist $\sqrt{3} \notin \Q\left(\sqrt{2}\right)$, denn sonst könnte man $\sqrt{3} = a + b\sqrt{2}$ mit $a, b \in \Q$ schreiben. Dann wäre aber $3 = a^2 + 2\sqrt{2}ab + 2b^2$.\\
-Koeffizientenvergleich \randbem{$1, \sqrt{2}$ sind linear unabhängig; $3 = 3 \cdot 1 + 0\sqrt{2}$} liefert: $ab = 0$, d.h. $a = 0$ oder $b = 0$.\\
+Koeffizientenvergleich \randbem{$1, \sqrt{2}$ sind linear unabhängig; $3 = 3 \cdot 1 + 0\sqrt{2}$} liefert: $ab = 0$, d.\,h. $a = 0$ oder $b = 0$.\\
 Im Fall $a = 0$ wäre $3 = 2b^2$, was nicht geht. Im Fall $b = 0$ wäre $3 = a^2$, was auch nicht geht.\\
 Daher ist $\sqrt{3}$ algebraisch über $\Q\left(\sqrt{2}\right)$ mit Minimalpolynom $X^2 - 3$.\\
 Folglich: $\left[\left(\Q\left(\sqrt{2}\right)\right)\left(\sqrt{3}\right):\Q\left(\sqrt{2}\right)\right] = \deg{\left(X^2 - 3\right)} = 2$.\\
@@ -194,7 +194,7 @@ Folglich: $\left[\Q\left(\sqrt{2} + \sqrt{3}\right):\Q\right] = 4$ und $\Q\left(
 % Satz 7.4
 %%%%%%%%%%%%%%%%%%%
 \begin{satz}\label{satz:7.4}
-Sei $E$ endlicher Körper mit $\left|E\right| = p^n \ \left(p \in \PZ, n \in \N\right)$ und sei $F$ Teilkörper von $E$ (z.B.: der Primkörper von $E$).\\
+Sei $E$ endlicher Körper mit $\left|E\right| = p^n \ \left(p \in \PZ, n \in \N\right)$ und sei $F$ Teilkörper von $E$ (z.\,B.: der Primkörper von $E$).\\
 Dann ist $E \cong F[X] / (\varphi)$ für ein irreduzibles Polynom $\varphi \in F[X]$ mit $\varphi\mid X^{p^n} - X$.
 \end{satz}
 
@@ -229,10 +229,10 @@ Dann:\randbem{Formel muss man wissen! Sehr wichtig für Theorie!} \[X^{q^n} - X =
 %%%%%%%%%%%%%%%%%%%
 \begin{beweis}
 Sei $\varphi \in K[X]$ irreduzibel mit $d := \deg{\varphi\mid n}$.\\
-Dann ist $K[X] / \varphi$ ein Körper mit $q^d$ Elementen. Für $b := X + (\varphi)$ gilt dann: $b^{q^d} = b$, d.h. $0 = b^{q^d} - b = X^{q^d} - X + (\varphi)$.\\
+Dann ist $K[X] / \varphi$ ein Körper mit $q^d$ Elementen. Für $b := X + (\varphi)$ gilt dann: $b^{q^d} = b$, d.\,h. $0 = b^{q^d} - b = X^{q^d} - X + (\varphi)$.\\
 Folglich: $\varphi\mid X^{q^d} - X\stackrel{\autoref{bem:7.3}}{\mid}X^{q^n} - X$.\\
-Sei umgekehrt $\varphi \in K[X]$ irreduzibel mit $\varphi\mid X^{q^n} - X$ und $d := \deg{\varphi}$. Wie im ersten Teil des Beweises ist $\varphi\mid X^{q^d} - X$. Daher: $\varphi\mid \ggT\left(X^{q^d} - X, X^n - X\right) = X^{q^{\ggT(d, n)}} - X$, d.h. $X^{q^{\ggT(d, n)}} - X + (\varphi) = 0$ in $K[X] / (\varphi)$.\\
-Jedes Element $K[X] / (\varphi)$ kann man in der folgenden Form schreiben: \[b = a_0 + a_1X + \ldots + a_{d-1}X^{d-1} + (\varphi) \ (a_i \in K).\] Für $a \in K$ ist $a = a^q = a^{q^2} = \ldots$. Daher ist \randbem{alle $b$ sind Nullstellen von $X^{q^{\ggT(d, n)}} - X$} $b^{q^{\ggT(d, n)}} = b$ für alle $b \in K[X]/(\varphi)$. Also $q^d = \left|K[X]/(\varphi)\right| \leq q^{\ggT(d, n)} \leq q^d$, d.h. $d = \ggT(d, n)\mid n$.\\
+Sei umgekehrt $\varphi \in K[X]$ irreduzibel mit $\varphi\mid X^{q^n} - X$ und $d := \deg{\varphi}$. Wie im ersten Teil des Beweises ist $\varphi\mid X^{q^d} - X$. Daher: $\varphi\mid \ggT\left(X^{q^d} - X, X^n - X\right) = X^{q^{\ggT(d, n)}} - X$, d.\,h. $X^{q^{\ggT(d, n)}} - X + (\varphi) = 0$ in $K[X] / (\varphi)$.\\
+Jedes Element $K[X] / (\varphi)$ kann man in der folgenden Form schreiben: \[b = a_0 + a_1X + \ldots + a_{d-1}X^{d-1} + (\varphi) \ (a_i \in K).\] Für $a \in K$ ist $a = a^q = a^{q^2} = \ldots$. Daher ist \randbem{alle $b$ sind Nullstellen von $X^{q^{\ggT(d, n)}} - X$} $b^{q^{\ggT(d, n)}} = b$ für alle $b \in K[X]/(\varphi)$. Also $q^d = \left|K[X]/(\varphi)\right| \leq q^{\ggT(d, n)} \leq q^d$, d.\,h. $d = \ggT(d, n)\mid n$.\\
 Folglich genügt zu zeigen, dass kein Primfaktor von $X^{q^n} - X$ mehrfach auftritt. Sei also $\varphi \in K[X]$ irreduzibel mit $\varphi^2\mid X^{q^n} - X$. Schreibe: $X^{q^n} - X = \varphi^2\varphi$ mit $\psi \in K[X]$. Formale Ableitung liefert den Widerspruch: 
 \[\begin{array}{lcl}
 \underbrace{-1}_{\text{Grad }0} & = & \left(X^{q^n} - X\right)'\\
@@ -257,9 +257,9 @@ q = 2 \colon & X^4 - X = X\left(X - 1\right)\left(X^2 + X + 1\right)\\
 %%%%%%%%%%%%%%%%%%%
 \begin{bem}\label{bem:7.4}
 Vergleich der Grade in \autoref{satz:7.5} liefert: $q^n := \sum\limits_{d\mid n}dI_d$, wobei $I_d$ die Anzahl der irreduziblen Polynome vom Grad $d$ in $K[X]$ bezeichnet. Möbius Inversion (\autoref{satz:3.4}) ergibt: 
-\[nI_n = \sum_{d\mid n}\mu(d)g^{\frac{n}{d}}\text{, d.h. } I_n = \frac{1}{n}\sum_{d\mid n}\mu(d)q^{\frac{n}{d}}.\]
+\[nI_n = \sum_{d\mid n}\mu(d)g^{\frac{n}{d}}\text{, d.\,h. } I_n = \frac{1}{n}\sum_{d\mid n}\mu(d)q^{\frac{n}{d}}.\]
 Bei festem $q$ und "`großem"' $n$ existieren also etwa $\frac{1}{n}q^n$ irreduzible Polynome vom Grad $n$ in $K[X]$. Da es insgesamt genau $q^n$ normierte Polynome vom Grad $n$ in $K[X]$ gibt, liegt die Wahrscheinlichkeit, dass ein zufällig ausgewähltes Polynom vom Grad $n$ in $K[X]$ irreduzibel ist, ungefähr bei $n$.\\
-Genauer: \randbem{$I_n$ kann nicht $= 0$ sein, daher gibt es immer irreduzible Polynome zu einem vorgegebenen Grad}
+Genauer: \randbem{$I_n$ kann nicht $= 0$ sein, Daher gibt es immer irreduzible Polynome zu einem vorgegebenen Grad}
 $\begin{array}[t]{lcl}
 I_1 & = & q,\\ 
 I_2 & = & \frac{1}{2}\left(q^2 - q\right),\\
@@ -281,7 +281,7 @@ Zu jedem endlichen Körper $K$ und jedem $n \in \N$ existiert mindestens ein irre
 % Beweis
 %%%%%%%%%%%%%%%%%%%
 \begin{beweis}
-Anderenfalls währe mit dem obigen Bezeichnungen $I_n = 0$, d.h. $0 = \sum\limits_{d\mid n}\mu(d)q^{\frac{n}{d}}$. Diese Gleichung hat die Form 
+Anderenfalls währe mit dem obigen Bezeichnungen $I_n = 0$, d.\,h. $0 = \sum\limits_{d\mid n}\mu(d)q^{\frac{n}{d}}$. Diese Gleichung hat die Form 
 \[0 = \pm q^{k_1} \pm q^{k_2} \pm \ldots \pm q^{k_r} \text{ mit } k_1 < k_2 < \ldots < k_r\] Wir erhalten so den Widerspruch: $0 \equiv \pm q^{k_1} \pmod{\left(q^{k_2}\right)}$.
 \end{beweis}
 
@@ -297,7 +297,7 @@ Sei $K$ ein endlicher Körper, und seien $\varphi, \psi$ irreduzible Polynome vom
 % Beweis
 %%%%%%%%%%%%%%%%%%%
 \begin{beweis}
-Sei $\left|K\right| = q$, also $\left|K[X]/(\varphi)\right| = q^n = \left|K[X]/(\psi)\right|$. Nach \autoref{satz:7.5} ist $\varphi\mid X^{q^n} - X$, d.h. $X^{q^n} - X = \varphi\omega$ mit $\omega \in K[X]$. Jedes $b \in K[X]/(\varphi)$ erfüllt $b^{q^n} = b$, d.h. $0 = b^{q^n} - b = \varphi(b)\omega(b)$. Da $\omega$ höchstens $\deg{\omega} < q^n$ Nullstellen in $K[X]/(\psi)$ hat, existiert ein $b \in K[X]/(\psi)$ mit $\varphi(b) = 0$. Die Abbildung $f \colon K[X]/(\varphi) \mapsto K[X]/(\psi)$, $\alpha + (\varphi) \mapsto \alpha(b)$, ist wohldefiniert; denn sind $\alpha, \beta \in K[X]$ mit $\alpha + (\varphi) = \beta + (\varphi)$, so ist $\beta = \alpha + \tau\varphi$ für ein $\tau \in K[X]$, also $\beta(b) = \alpha(b) + \tau(b)\varphi(b) = \alpha(b)$. Man rechnet leicht nach, dass $f$ ein Körperhomomorphismus ist. Insbesondere ist $f$ injektiv, also auch surjektiv.
+Sei $\left|K\right| = q$, also $\left|K[X]/(\varphi)\right| = q^n = \left|K[X]/(\psi)\right|$. Nach \autoref{satz:7.5} ist $\varphi\mid X^{q^n} - X$, d.\,h. $X^{q^n} - X = \varphi\omega$ mit $\omega \in K[X]$. Jedes $b \in K[X]/(\varphi)$ erfüllt $b^{q^n} = b$, d.\,h. $0 = b^{q^n} - b = \varphi(b)\omega(b)$. Da $\omega$ höchstens $\deg{\omega} < q^n$ Nullstellen in $K[X]/(\psi)$ hat, existiert ein $b \in K[X]/(\psi)$ mit $\varphi(b) = 0$. Die Abbildung $f \colon K[X]/(\varphi) \mapsto K[X]/(\psi)$, $\alpha + (\varphi) \mapsto \alpha(b)$, ist wohldefiniert; denn sind $\alpha, \beta \in K[X]$ mit $\alpha + (\varphi) = \beta + (\varphi)$, so ist $\beta = \alpha + \tau\varphi$ für ein $\tau \in K[X]$, also $\beta(b) = \alpha(b) + \tau(b)\varphi(b) = \alpha(b)$. Man rechnet leicht nach, dass $f$ ein Körperhomomorphismus ist. Insbesondere ist $f$ injektiv, also auch surjektiv.
 \end{beweis}
 
 %%%%%%%%%%%%%%%%%%%
@@ -326,9 +326,9 @@ Für $p \in \PZ$ und $n \in \N$ hat $\F_{p^n}$ genau $n$ Körperautomorphismen, nä
 %%%%%%%%%%%%%%%%%%%
 \begin{beweis}
 Für $i \in \N_0$ ist $f^i \colon \F_{p^n} \mapsto \F_{p^n}$, $x \mapsto x^{p^i}$, ein Körperautomorphismus; dabei ist $f^n = id_{\F_{p^n}}$.\\
-Seien $i, j \in \N_0$ mit $1 \leq i \leq j < n$ und $f^i = f^j$. Dann ist $f^{j-i} = id_{\F_{p^n}}$, d.h. $x^{p^{j-i}} = x$ für alle $x \in \F_{p^n}$. Da das Polynom $X^{p^{j-i}} - X$ im Fall $j \neq i$ höchstens $p^{j-i}$ Nullstellen hat, folgt $j = i$. Daher sind $id_{\F_{p^n}}, f, f^2, \ldots, f^{n-1}$ paarweise verschieden.\\
+Seien $i, j \in \N_0$ mit $1 \leq i \leq j < n$ und $f^i = f^j$. Dann ist $f^{j-i} = id_{\F_{p^n}}$, d.\,h. $x^{p^{j-i}} = x$ für alle $x \in \F_{p^n}$. Da das Polynom $X^{p^{j-i}} - X$ im Fall $j \neq i$ höchstens $p^{j-i}$ Nullstellen hat, folgt $j = i$. Daher sind $id_{\F_{p^n}}, f, f^2, \ldots, f^{n-1}$ paarweise verschieden.\\
 Andererseits existiert ein $b \in \F_{p^n}$ mit $\F_{p^n} = \left\{0, 1, b, b^2, \ldots, b^{p^n-2}\right\}$ und $b^{p^n-1} = 1$.\\
-Der Primkörper $P$ von $\F_{p^n}$ ist zu $\F_p$ isomorph, o.B.d.A. $\F_p = \PZ \subseteq \F_{p^n}$.\\
+Der Primkörper $P$ von $\F_{p^n}$ ist zu $\F_p$ isomorph, \OE{} $\F_p = \PZ \subseteq \F_{p^n}$.\\
 Wegen $\F_{p^n} = \F_p(b)$ hat das Minimalpolynom $\mu$ von $b$ über $\F_p$ den Grad $n$.\\
 Schreibe $\mu = X^n + a_{n-1}X^{n-1} + \ldots + a_1X + a_0 \ (a_i \in \F_p)$.\\
 Für jeden Körperautomorphismus $g$ von $\F_{p^n}$ gilt: $g(a) = a$ für $a \in \F_p$, und 
